// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`info releasedAbilities() 1`] = `Array []`;

exports[`info releasedAbilities() 2`] = `Array []`;

exports[`info releasedAbilities() 3`] = `
Array [
  1,
  2,
  3,
  4,
  5,
  6,
  7,
  8,
  9,
  10,
  11,
  12,
  13,
  14,
  15,
  16,
  17,
  18,
  19,
  20,
  21,
  22,
  23,
  24,
  25,
  26,
  27,
  28,
  29,
  30,
  31,
  32,
  33,
  34,
  35,
  36,
  37,
  38,
  39,
  40,
  41,
  42,
  43,
  44,
  45,
  46,
  47,
  48,
  49,
  50,
  51,
  52,
  53,
  54,
  55,
  56,
  57,
  58,
  59,
  60,
  61,
  62,
  63,
  64,
  65,
  66,
  67,
  68,
  69,
  70,
  71,
  72,
  73,
  74,
  75,
  76,
]
`;

exports[`info releasedAbilities() 4`] = `
Array [
  1,
  2,
  3,
  4,
  5,
  6,
  7,
  8,
  9,
  10,
  11,
  12,
  13,
  14,
  15,
  16,
  17,
  18,
  19,
  20,
  21,
  22,
  23,
  24,
  25,
  26,
  27,
  28,
  29,
  30,
  31,
  32,
  33,
  34,
  35,
  36,
  37,
  38,
  39,
  40,
  41,
  42,
  43,
  44,
  45,
  46,
  47,
  48,
  49,
  50,
  51,
  52,
  53,
  54,
  55,
  56,
  57,
  58,
  59,
  60,
  61,
  62,
  63,
  64,
  65,
  66,
  67,
  68,
  69,
  70,
  71,
  72,
  73,
  74,
  75,
  76,
  77,
  78,
  79,
  80,
  81,
  82,
  83,
  84,
  85,
  86,
  87,
  88,
  89,
  90,
  91,
  92,
  93,
  94,
  95,
  96,
  97,
  98,
  99,
  100,
  101,
  102,
  103,
  104,
  105,
  106,
  107,
  108,
  109,
  110,
  111,
  112,
  113,
  114,
  115,
  116,
  117,
  118,
  119,
  120,
  121,
  122,
  123,
]
`;

exports[`info releasedAbilities() 5`] = `
Array [
  1,
  2,
  3,
  4,
  5,
  6,
  7,
  8,
  9,
  10,
  11,
  12,
  13,
  14,
  15,
  16,
  17,
  18,
  19,
  20,
  21,
  22,
  23,
  24,
  25,
  26,
  27,
  28,
  29,
  30,
  31,
  32,
  33,
  34,
  35,
  36,
  37,
  38,
  39,
  40,
  41,
  42,
  43,
  44,
  45,
  46,
  47,
  48,
  49,
  50,
  51,
  52,
  53,
  54,
  55,
  56,
  57,
  58,
  59,
  60,
  61,
  62,
  63,
  64,
  65,
  66,
  67,
  68,
  69,
  70,
  71,
  72,
  73,
  74,
  75,
  76,
  77,
  78,
  79,
  80,
  81,
  82,
  83,
  84,
  85,
  86,
  87,
  88,
  89,
  90,
  91,
  92,
  93,
  94,
  95,
  96,
  97,
  98,
  99,
  100,
  101,
  102,
  103,
  104,
  105,
  106,
  107,
  108,
  109,
  110,
  111,
  112,
  113,
  114,
  115,
  116,
  117,
  118,
  119,
  120,
  121,
  122,
  123,
  124,
  125,
  126,
  127,
  128,
  129,
  130,
  131,
  132,
  133,
  134,
  135,
  136,
  137,
  138,
  139,
  140,
  141,
  142,
  143,
  144,
  145,
  146,
  147,
  148,
  149,
  150,
  151,
  152,
  153,
  154,
  155,
  156,
  157,
  158,
  159,
  160,
  161,
  162,
  163,
  164,
]
`;

exports[`info releasedAbilities() 6`] = `
Array [
  1,
  2,
  3,
  4,
  5,
  6,
  7,
  8,
  9,
  10,
  11,
  12,
  13,
  14,
  15,
  16,
  17,
  18,
  19,
  20,
  21,
  22,
  23,
  24,
  25,
  26,
  27,
  28,
  29,
  30,
  31,
  32,
  33,
  34,
  35,
  36,
  37,
  38,
  39,
  40,
  41,
  42,
  43,
  44,
  45,
  46,
  47,
  48,
  49,
  50,
  51,
  52,
  53,
  54,
  55,
  56,
  57,
  58,
  59,
  60,
  61,
  62,
  63,
  64,
  65,
  66,
  67,
  68,
  69,
  70,
  71,
  72,
  73,
  74,
  75,
  76,
  77,
  78,
  79,
  80,
  81,
  82,
  83,
  84,
  85,
  86,
  87,
  88,
  89,
  90,
  91,
  92,
  93,
  94,
  95,
  96,
  97,
  98,
  99,
  100,
  101,
  102,
  103,
  104,
  105,
  106,
  107,
  108,
  109,
  110,
  111,
  112,
  113,
  114,
  115,
  116,
  117,
  118,
  119,
  120,
  121,
  122,
  123,
  124,
  125,
  126,
  127,
  128,
  129,
  130,
  131,
  132,
  133,
  134,
  135,
  136,
  137,
  138,
  139,
  140,
  141,
  142,
  143,
  144,
  145,
  146,
  147,
  148,
  149,
  150,
  151,
  152,
  153,
  154,
  155,
  156,
  157,
  158,
  159,
  160,
  161,
  162,
  163,
  164,
  165,
  166,
  167,
  168,
  169,
  170,
  171,
  172,
  173,
  174,
  175,
  176,
  177,
  178,
  179,
  180,
  181,
  182,
  183,
  184,
  185,
  186,
  187,
  188,
  189,
  190,
  191,
]
`;

exports[`info releasedAbilities() 7`] = `
Array [
  1,
  2,
  3,
  4,
  5,
  6,
  7,
  8,
  9,
  10,
  11,
  12,
  13,
  14,
  15,
  16,
  17,
  18,
  19,
  20,
  21,
  22,
  23,
  24,
  25,
  26,
  27,
  28,
  29,
  30,
  31,
  32,
  33,
  34,
  35,
  36,
  37,
  38,
  39,
  40,
  41,
  42,
  43,
  44,
  45,
  46,
  47,
  48,
  49,
  50,
  51,
  52,
  53,
  54,
  55,
  56,
  57,
  58,
  59,
  60,
  61,
  62,
  63,
  64,
  65,
  66,
  67,
  68,
  69,
  70,
  71,
  72,
  73,
  74,
  75,
  76,
  77,
  78,
  79,
  80,
  81,
  82,
  83,
  84,
  85,
  86,
  87,
  88,
  89,
  90,
  91,
  92,
  93,
  94,
  95,
  96,
  97,
  98,
  99,
  100,
  101,
  102,
  103,
  104,
  105,
  106,
  107,
  108,
  109,
  110,
  111,
  112,
  113,
  114,
  115,
  116,
  117,
  118,
  119,
  120,
  121,
  122,
  123,
  124,
  125,
  126,
  127,
  128,
  129,
  130,
  131,
  132,
  133,
  134,
  135,
  136,
  137,
  138,
  139,
  140,
  141,
  142,
  143,
  144,
  145,
  146,
  147,
  148,
  149,
  150,
  151,
  152,
  153,
  154,
  155,
  156,
  157,
  158,
  159,
  160,
  161,
  162,
  163,
  164,
  165,
  166,
  167,
  168,
  169,
  170,
  171,
  172,
  173,
  174,
  175,
  176,
  177,
  178,
  179,
  180,
  181,
  182,
  183,
  184,
  185,
  186,
  187,
  188,
  189,
  190,
  191,
  192,
  193,
  194,
  195,
  196,
  197,
  198,
  199,
  200,
  201,
  202,
  203,
  204,
  205,
  206,
  207,
  208,
  209,
  210,
  211,
  212,
  213,
  214,
  215,
  216,
  217,
  218,
  219,
  220,
  221,
  222,
  223,
  224,
  225,
  226,
  227,
  228,
  229,
  230,
  231,
  232,
]
`;

exports[`info releasedItems() 1`] = `Array []`;

exports[`info releasedItems() 2`] = `
Array [
  3,
  9,
  15,
  18,
  32,
  34,
  42,
  43,
  44,
  45,
  46,
  47,
  48,
  51,
  54,
  55,
  56,
  57,
  58,
  61,
  62,
  63,
  64,
  65,
  66,
  67,
  68,
  69,
  70,
  73,
  74,
  75,
  79,
  80,
  83,
  84,
  85,
  86,
  87,
  89,
  90,
  92,
  94,
  95,
  96,
  97,
  98,
  99,
  101,
  103,
  104,
  105,
  106,
  107,
  108,
  110,
  111,
  112,
  113,
  115,
  116,
  117,
  121,
  122,
  123,
  125,
  129,
  130,
  132,
  134,
  135,
  136,
  137,
  138,
  139,
  140,
  142,
  143,
  144,
  146,
  147,
  148,
  149,
  150,
  151,
  156,
  158,
  164,
  165,
  166,
  180,
  200,
  206,
  304,
  305,
  306,
  307,
  308,
  309,
  310,
  311,
  312,
  313,
  314,
  315,
  316,
  317,
  1000,
  1001,
  9000,
  9001,
  9002,
  9003,
  9004,
  9005,
  9006,
  9007,
  9008,
  9009,
]
`;

exports[`info releasedItems() 3`] = `
Array [
  2,
  3,
  4,
  9,
  12,
  14,
  15,
  17,
  18,
  21,
  26,
  31,
  32,
  34,
  35,
  37,
  40,
  42,
  43,
  44,
  45,
  46,
  47,
  48,
  49,
  51,
  52,
  53,
  54,
  55,
  56,
  57,
  58,
  60,
  61,
  62,
  63,
  64,
  65,
  66,
  67,
  68,
  69,
  70,
  72,
  73,
  74,
  75,
  77,
  79,
  80,
  81,
  83,
  84,
  85,
  86,
  87,
  88,
  89,
  90,
  92,
  94,
  95,
  96,
  97,
  98,
  99,
  100,
  101,
  103,
  104,
  105,
  106,
  107,
  108,
  110,
  111,
  113,
  114,
  115,
  116,
  117,
  119,
  120,
  121,
  122,
  123,
  124,
  125,
  126,
  127,
  128,
  129,
  130,
  131,
  132,
  134,
  135,
  136,
  137,
  138,
  139,
  140,
  142,
  143,
  144,
  145,
  146,
  147,
  148,
  149,
  150,
  151,
  152,
  153,
  154,
  156,
  158,
  163,
  164,
  165,
  166,
  180,
  184,
  200,
  204,
  205,
  206,
  207,
  208,
  210,
  220,
  305,
  306,
  307,
  308,
  309,
  310,
  311,
  312,
  313,
  314,
  315,
  316,
  317,
  318,
  319,
  320,
  321,
  322,
  323,
  324,
  8000,
  8001,
  8002,
  8003,
  8004,
  8005,
  8006,
  8007,
  8008,
  8009,
  8010,
  8011,
  8012,
  8013,
  8014,
  8015,
  8016,
  8017,
  8018,
  8019,
  8020,
  8021,
  8022,
  8023,
  8024,
  8025,
  8026,
  8027,
  8028,
  8029,
  8030,
  8031,
  8032,
  8033,
  8034,
  8051,
  8052,
  8053,
  8054,
  8055,
  8056,
  8057,
  8058,
  8059,
]
`;

exports[`info releasedItems() 4`] = `
Array [
  1,
  2,
  3,
  4,
  5,
  6,
  7,
  8,
  9,
  10,
  11,
  12,
  13,
  14,
  15,
  16,
  17,
  18,
  19,
  20,
  21,
  22,
  23,
  24,
  25,
  26,
  27,
  28,
  29,
  30,
  31,
  32,
  33,
  34,
  35,
  36,
  37,
  38,
  39,
  40,
  41,
  42,
  43,
  44,
  45,
  46,
  47,
  48,
  49,
  50,
  51,
  52,
  53,
  54,
  55,
  56,
  57,
  58,
  59,
  60,
  61,
  62,
  63,
  64,
  65,
  66,
  67,
  68,
  69,
  70,
  71,
  72,
  73,
  74,
  75,
  76,
  77,
  78,
  79,
  80,
  81,
  82,
  83,
  84,
  85,
  86,
  87,
  88,
  89,
  90,
  91,
  92,
  93,
  94,
  95,
  96,
  97,
  98,
  99,
  100,
  101,
  102,
  103,
  104,
  105,
  106,
  107,
  108,
  109,
  110,
  111,
  112,
  113,
  114,
  115,
  116,
  117,
  118,
  119,
  120,
  121,
  122,
  123,
  124,
  125,
  126,
  127,
  128,
  129,
  130,
  131,
  132,
  133,
  134,
  135,
  136,
  137,
  138,
  139,
  140,
  141,
  142,
  143,
  144,
  145,
  146,
  147,
  148,
  149,
  150,
  151,
  152,
  153,
  154,
  155,
  156,
  157,
  158,
  159,
  160,
  161,
  162,
  163,
  164,
  165,
  166,
  167,
  168,
  169,
  170,
  171,
  172,
  173,
  174,
  175,
  176,
  177,
  178,
  179,
  180,
  181,
  182,
  183,
  184,
  185,
  186,
  187,
  188,
  189,
  190,
  191,
  192,
  193,
  194,
  195,
  196,
  197,
  198,
  199,
  200,
  201,
  202,
  203,
  204,
  205,
  206,
  207,
  208,
  209,
  210,
  211,
  212,
  213,
  214,
  215,
  216,
  217,
  218,
  219,
  220,
  221,
  222,
  223,
  224,
  225,
  226,
  305,
  306,
  307,
  308,
  309,
  310,
  311,
  312,
  313,
  314,
  315,
  316,
  317,
  318,
  319,
  320,
  321,
  322,
  323,
  324,
  325,
  326,
  327,
  328,
  329,
  8000,
  8001,
  8002,
  8003,
  8004,
  8005,
  8006,
  8007,
  8008,
  8009,
  8010,
  8011,
  8012,
  8013,
  8014,
  8015,
  8016,
  8017,
  8018,
  8019,
  8020,
  8021,
  8022,
  8023,
  8024,
  8025,
  8026,
  8027,
  8028,
  8029,
  8030,
  8031,
  8032,
  8033,
  8034,
  8035,
  8036,
  8037,
  8038,
  8039,
  8040,
  8041,
  8042,
  8043,
  8044,
  8045,
  8046,
  8047,
  8048,
  8049,
  8050,
  8051,
  8052,
  8053,
  8054,
  8055,
  8056,
  8057,
  8058,
  8059,
  8060,
  8061,
  8062,
  8063,
]
`;

exports[`info releasedItems() 5`] = `
Array [
  1,
  2,
  3,
  4,
  5,
  6,
  7,
  8,
  9,
  10,
  11,
  12,
  13,
  14,
  15,
  16,
  17,
  18,
  19,
  20,
  21,
  22,
  23,
  24,
  25,
  26,
  27,
  28,
  29,
  30,
  31,
  32,
  33,
  34,
  35,
  36,
  37,
  38,
  39,
  40,
  41,
  42,
  43,
  44,
  45,
  46,
  47,
  48,
  49,
  50,
  51,
  52,
  53,
  54,
  55,
  56,
  57,
  58,
  59,
  60,
  61,
  62,
  63,
  64,
  65,
  66,
  67,
  68,
  69,
  70,
  71,
  72,
  73,
  74,
  75,
  76,
  77,
  78,
  79,
  80,
  81,
  82,
  83,
  84,
  85,
  86,
  87,
  88,
  89,
  90,
  91,
  92,
  93,
  94,
  95,
  96,
  97,
  98,
  99,
  100,
  101,
  102,
  103,
  104,
  105,
  106,
  107,
  108,
  109,
  110,
  111,
  112,
  113,
  114,
  115,
  116,
  117,
  118,
  119,
  120,
  121,
  122,
  123,
  124,
  125,
  126,
  127,
  128,
  129,
  130,
  131,
  132,
  133,
  134,
  135,
  136,
  137,
  138,
  139,
  140,
  141,
  142,
  143,
  144,
  145,
  146,
  147,
  148,
  149,
  150,
  151,
  152,
  153,
  154,
  155,
  156,
  157,
  158,
  159,
  160,
  161,
  162,
  163,
  164,
  165,
  166,
  167,
  168,
  169,
  170,
  171,
  172,
  173,
  174,
  175,
  176,
  177,
  178,
  179,
  180,
  181,
  182,
  183,
  184,
  185,
  186,
  187,
  188,
  189,
  190,
  191,
  192,
  193,
  194,
  195,
  196,
  197,
  198,
  199,
  200,
  201,
  202,
  203,
  204,
  205,
  206,
  207,
  208,
  209,
  210,
  211,
  212,
  213,
  214,
  215,
  216,
  217,
  218,
  219,
  220,
  221,
  222,
  223,
  224,
  225,
  226,
  227,
  228,
  229,
  230,
  231,
  232,
  233,
  234,
  235,
  236,
  237,
  238,
  239,
  240,
  241,
  242,
  243,
  244,
  245,
  246,
  247,
  248,
  249,
  250,
  251,
  252,
  253,
  254,
  255,
  256,
  257,
  258,
  259,
  260,
  261,
  262,
  263,
  264,
  265,
  266,
  267,
  268,
  269,
  270,
  271,
  272,
  273,
  274,
  275,
  276,
  277,
  278,
  279,
  280,
  281,
  282,
  283,
  284,
  285,
  286,
  287,
  288,
  289,
  290,
  291,
  292,
  293,
  294,
  295,
  296,
  297,
  298,
  299,
  300,
  301,
  302,
  303,
  305,
  306,
  307,
  308,
  309,
  310,
  311,
  312,
  313,
  314,
  315,
  316,
  317,
  318,
  319,
  320,
  321,
  322,
  323,
  324,
  325,
  326,
  327,
  328,
  329,
  8000,
  8001,
  8002,
  8003,
  8004,
  8005,
  8006,
  8007,
  8008,
  8009,
  8010,
  8011,
  8012,
  8013,
  8014,
  8015,
  8016,
  8017,
  8018,
  8019,
  8020,
  8021,
  8022,
  8023,
  8024,
  8025,
  8026,
  8027,
  8028,
  8029,
  8030,
  8031,
  8032,
  8033,
  8034,
  8035,
  8036,
  8037,
  8038,
  8039,
  8040,
  8041,
  8042,
  8043,
  8044,
  8045,
  8046,
  8047,
  8048,
  8049,
  8050,
  8051,
  8052,
  8053,
  8054,
  8055,
  8056,
  8057,
  8058,
  8059,
  8060,
  8061,
  8062,
  8063,
]
`;

exports[`info releasedItems() 6`] = `
Array [
  1,
  2,
  3,
  4,
  5,
  6,
  7,
  8,
  9,
  10,
  11,
  12,
  13,
  14,
  15,
  16,
  17,
  18,
  19,
  20,
  21,
  22,
  23,
  24,
  25,
  26,
  27,
  28,
  29,
  30,
  31,
  32,
  33,
  34,
  35,
  36,
  37,
  38,
  39,
  40,
  41,
  42,
  43,
  44,
  45,
  46,
  47,
  48,
  49,
  50,
  51,
  52,
  53,
  54,
  55,
  56,
  57,
  58,
  59,
  60,
  61,
  62,
  63,
  64,
  65,
  66,
  67,
  68,
  69,
  70,
  71,
  72,
  73,
  74,
  75,
  76,
  77,
  78,
  79,
  80,
  81,
  82,
  83,
  84,
  85,
  86,
  87,
  88,
  89,
  90,
  91,
  92,
  93,
  94,
  95,
  96,
  97,
  98,
  99,
  100,
  101,
  102,
  103,
  104,
  105,
  106,
  107,
  108,
  109,
  110,
  111,
  112,
  113,
  114,
  115,
  116,
  117,
  118,
  119,
  120,
  121,
  122,
  123,
  124,
  125,
  126,
  127,
  128,
  129,
  130,
  131,
  132,
  133,
  134,
  135,
  136,
  137,
  138,
  139,
  140,
  141,
  142,
  143,
  144,
  145,
  146,
  147,
  148,
  149,
  150,
  151,
  152,
  153,
  154,
  155,
  156,
  157,
  158,
  159,
  160,
  161,
  162,
  163,
  164,
  165,
  166,
  167,
  168,
  169,
  170,
  171,
  172,
  173,
  174,
  175,
  176,
  177,
  178,
  179,
  180,
  181,
  182,
  183,
  184,
  185,
  186,
  187,
  188,
  189,
  190,
  191,
  192,
  193,
  194,
  195,
  196,
  197,
  198,
  199,
  200,
  201,
  202,
  203,
  204,
  205,
  206,
  207,
  208,
  209,
  210,
  211,
  212,
  213,
  214,
  215,
  216,
  217,
  218,
  219,
  220,
  221,
  222,
  223,
  224,
  225,
  226,
  227,
  228,
  229,
  230,
  231,
  232,
  233,
  234,
  235,
  236,
  237,
  238,
  239,
  240,
  241,
  242,
  243,
  244,
  245,
  246,
  247,
  248,
  249,
  250,
  251,
  252,
  253,
  254,
  255,
  256,
  257,
  258,
  259,
  260,
  261,
  262,
  263,
  264,
  265,
  266,
  267,
  268,
  269,
  270,
  271,
  272,
  273,
  274,
  275,
  276,
  277,
  278,
  279,
  280,
  281,
  282,
  283,
  284,
  285,
  286,
  287,
  288,
  289,
  290,
  291,
  292,
  293,
  294,
  295,
  296,
  297,
  298,
  299,
  300,
  301,
  302,
  303,
  305,
  306,
  307,
  308,
  309,
  310,
  311,
  312,
  313,
  314,
  315,
  316,
  317,
  318,
  319,
  320,
  321,
  322,
  323,
  324,
  325,
  326,
  327,
  328,
  329,
  330,
  331,
  332,
  333,
  334,
  335,
  336,
  337,
  338,
  339,
  340,
  341,
  342,
  343,
  2001,
  2002,
  2003,
  2004,
  2005,
  2006,
  2007,
  2008,
  2009,
  2010,
  2011,
  2012,
  2013,
  2014,
  2015,
  2016,
  2017,
  2018,
  2019,
  2020,
  2021,
  2022,
  2023,
  2024,
  2025,
  2026,
  2027,
  2028,
  2029,
  2030,
  2031,
  2032,
  2033,
  2034,
  2035,
  2036,
  2037,
  2038,
  2039,
  2040,
  2041,
  2042,
  2043,
  2044,
  2045,
  2046,
  2047,
  8000,
  8001,
  8002,
  8003,
  8004,
  8005,
  8006,
  8007,
  8008,
  8009,
  8010,
  8011,
  8012,
  8013,
  8014,
  8015,
  8016,
  8017,
  8018,
  8019,
  8020,
  8021,
  8022,
  8023,
  8024,
  8025,
  8026,
  8027,
  8028,
  8029,
  8030,
  8031,
  8032,
  8033,
  8034,
  8035,
  8036,
  8037,
  8038,
  8039,
  8040,
  8041,
  8042,
  8043,
  8044,
  8045,
  8046,
  8047,
  8048,
  8049,
  8050,
  8051,
  8052,
  8053,
  8054,
  8055,
  8056,
  8057,
  8058,
  8059,
  8060,
  8061,
  8062,
  8063,
  8064,
  8065,
  8066,
  8067,
]
`;

exports[`info releasedItems() 7`] = `
Array [
  1,
  2,
  3,
  4,
  5,
  6,
  7,
  8,
  9,
  10,
  11,
  12,
  13,
  14,
  15,
  16,
  17,
  18,
  19,
  20,
  21,
  22,
  23,
  24,
  25,
  26,
  27,
  28,
  29,
  30,
  31,
  32,
  33,
  34,
  35,
  36,
  37,
  38,
  39,
  40,
  41,
  42,
  43,
  44,
  45,
  46,
  47,
  48,
  49,
  50,
  51,
  52,
  53,
  54,
  55,
  56,
  57,
  58,
  59,
  60,
  61,
  62,
  63,
  64,
  65,
  66,
  67,
  68,
  69,
  70,
  71,
  72,
  73,
  74,
  75,
  76,
  77,
  78,
  79,
  80,
  81,
  82,
  83,
  84,
  85,
  86,
  87,
  88,
  89,
  90,
  91,
  92,
  93,
  94,
  95,
  96,
  97,
  98,
  99,
  100,
  101,
  102,
  103,
  104,
  105,
  106,
  107,
  108,
  109,
  110,
  111,
  112,
  113,
  114,
  115,
  116,
  117,
  118,
  119,
  120,
  121,
  122,
  123,
  124,
  125,
  126,
  127,
  128,
  129,
  130,
  131,
  132,
  133,
  134,
  135,
  136,
  137,
  138,
  139,
  140,
  141,
  142,
  143,
  144,
  145,
  146,
  147,
  148,
  149,
  150,
  151,
  152,
  153,
  154,
  155,
  156,
  157,
  158,
  159,
  160,
  161,
  162,
  163,
  164,
  165,
  166,
  167,
  168,
  169,
  170,
  171,
  172,
  173,
  174,
  175,
  176,
  177,
  178,
  179,
  180,
  181,
  182,
  183,
  184,
  185,
  186,
  187,
  188,
  189,
  190,
  191,
  192,
  193,
  194,
  195,
  196,
  197,
  198,
  199,
  200,
  201,
  202,
  203,
  204,
  205,
  206,
  207,
  208,
  209,
  210,
  211,
  212,
  213,
  214,
  215,
  216,
  217,
  218,
  219,
  220,
  221,
  222,
  223,
  224,
  225,
  226,
  227,
  228,
  229,
  230,
  231,
  232,
  233,
  234,
  235,
  236,
  237,
  238,
  239,
  240,
  241,
  242,
  243,
  244,
  245,
  246,
  247,
  248,
  249,
  250,
  251,
  252,
  253,
  254,
  255,
  256,
  257,
  258,
  259,
  260,
  261,
  262,
  263,
  264,
  265,
  266,
  267,
  268,
  269,
  270,
  271,
  272,
  273,
  274,
  275,
  276,
  277,
  278,
  279,
  280,
  281,
  282,
  283,
  284,
  285,
  286,
  287,
  288,
  289,
  290,
  291,
  292,
  293,
  294,
  295,
  296,
  297,
  298,
  299,
  300,
  301,
  302,
  303,
  305,
  306,
  307,
  308,
  309,
  310,
  311,
  312,
  313,
  314,
  315,
  316,
  317,
  318,
  319,
  320,
  321,
  322,
  323,
  324,
  325,
  326,
  327,
  328,
  329,
  330,
  331,
  332,
  333,
  334,
  335,
  336,
  337,
  338,
  339,
  340,
  341,
  342,
  343,
  344,
  345,
  346,
  347,
  348,
  349,
  350,
  351,
  352,
  353,
  354,
  355,
  356,
  357,
  358,
  359,
  360,
  361,
  362,
  363,
  364,
  365,
  366,
  367,
  368,
  369,
  370,
  371,
  372,
  373,
  374,
  375,
  376,
  377,
  378,
  2001,
  2002,
  2003,
  2004,
  2005,
  2006,
  2007,
  2008,
  2009,
  2010,
  2011,
  2012,
  2013,
  2014,
  2015,
  2016,
  2017,
  2018,
  2019,
  2020,
  2021,
  2022,
  2023,
  2024,
  2025,
  2026,
  2027,
  2028,
  2029,
  2030,
  2031,
  2032,
  2033,
  2034,
  2035,
  2036,
  2037,
  2038,
  2039,
  2040,
  2041,
  2042,
  2043,
  2044,
  2045,
  2046,
  2047,
  3000,
  3001,
  3002,
  3003,
  3004,
  3005,
  3006,
  3007,
  3008,
  3009,
  3010,
  3011,
  3012,
  3013,
  3014,
  3015,
  3016,
  3017,
  3018,
  3019,
  3020,
  3021,
  3022,
  3023,
  3024,
  3025,
  3026,
  3027,
  3028,
  8000,
  8001,
  8002,
  8003,
  8004,
  8005,
  8006,
  8007,
  8008,
  8009,
  8010,
  8011,
  8012,
  8013,
  8014,
  8015,
  8016,
  8017,
  8018,
  8019,
  8020,
  8021,
  8022,
  8023,
  8024,
  8025,
  8026,
  8027,
  8028,
  8029,
  8030,
  8031,
  8032,
  8033,
  8034,
  8035,
  8036,
  8037,
  8038,
  8039,
  8040,
  8041,
  8042,
  8043,
  8044,
  8045,
  8046,
  8047,
  8048,
  8049,
  8050,
  8051,
  8052,
  8053,
  8054,
  8055,
  8056,
  8057,
  8058,
  8059,
  8060,
  8061,
  8062,
  8063,
  8064,
  8065,
  8066,
  8067,
]
`;

exports[`info releasedMoves() 1`] = `
Array [
  1,
  2,
  3,
  4,
  5,
  6,
  7,
  8,
  9,
  10,
  11,
  12,
  13,
  14,
  15,
  16,
  17,
  18,
  19,
  20,
  21,
  22,
  23,
  24,
  25,
  26,
  27,
  28,
  29,
  30,
  31,
  32,
  33,
  34,
  35,
  36,
  37,
  38,
  39,
  40,
  41,
  42,
  43,
  44,
  45,
  46,
  47,
  48,
  49,
  50,
  51,
  52,
  53,
  54,
  55,
  56,
  57,
  58,
  59,
  60,
  61,
  62,
  63,
  64,
  65,
  66,
  67,
  68,
  69,
  70,
  71,
  72,
  73,
  74,
  75,
  76,
  77,
  78,
  79,
  80,
  81,
  82,
  83,
  84,
  85,
  86,
  87,
  88,
  89,
  90,
  91,
  92,
  93,
  94,
  95,
  96,
  97,
  98,
  99,
  100,
  101,
  102,
  103,
  104,
  105,
  106,
  107,
  108,
  109,
  110,
  111,
  112,
  113,
  114,
  115,
  116,
  117,
  118,
  119,
  120,
  121,
  122,
  123,
  124,
  125,
  126,
  127,
  128,
  129,
  130,
  131,
  132,
  133,
  134,
  135,
  136,
  137,
  138,
  139,
  140,
  141,
  142,
  143,
  144,
  145,
  146,
  147,
  148,
  149,
  150,
  151,
  152,
  153,
  154,
  155,
  156,
  157,
  158,
  159,
  160,
  161,
  162,
  163,
  164,
  165,
]
`;

exports[`info releasedMoves() 2`] = `
Array [
  1,
  2,
  3,
  4,
  5,
  6,
  7,
  8,
  9,
  10,
  11,
  12,
  13,
  14,
  15,
  16,
  17,
  18,
  19,
  20,
  21,
  22,
  23,
  24,
  25,
  26,
  27,
  28,
  29,
  30,
  31,
  32,
  33,
  34,
  35,
  36,
  37,
  38,
  39,
  40,
  41,
  42,
  43,
  44,
  45,
  46,
  47,
  48,
  49,
  50,
  51,
  52,
  53,
  54,
  55,
  56,
  57,
  58,
  59,
  60,
  61,
  62,
  63,
  64,
  65,
  66,
  67,
  68,
  69,
  70,
  71,
  72,
  73,
  74,
  75,
  76,
  77,
  78,
  79,
  80,
  81,
  82,
  83,
  84,
  85,
  86,
  87,
  88,
  89,
  90,
  91,
  92,
  93,
  94,
  95,
  96,
  97,
  98,
  99,
  100,
  101,
  102,
  103,
  104,
  105,
  106,
  107,
  108,
  109,
  110,
  111,
  112,
  113,
  114,
  115,
  116,
  117,
  118,
  119,
  120,
  121,
  122,
  123,
  124,
  125,
  126,
  127,
  128,
  129,
  130,
  131,
  132,
  133,
  134,
  135,
  136,
  137,
  138,
  139,
  140,
  141,
  142,
  143,
  144,
  145,
  146,
  147,
  148,
  149,
  150,
  151,
  152,
  153,
  154,
  155,
  156,
  157,
  158,
  159,
  160,
  161,
  162,
  163,
  164,
  165,
  166,
  167,
  168,
  169,
  170,
  171,
  172,
  173,
  174,
  175,
  176,
  177,
  178,
  179,
  180,
  181,
  182,
  183,
  184,
  185,
  186,
  187,
  188,
  189,
  190,
  191,
  192,
  193,
  194,
  195,
  196,
  197,
  198,
  199,
  200,
  201,
  202,
  203,
  204,
  205,
  206,
  207,
  208,
  209,
  210,
  211,
  212,
  213,
  214,
  215,
  216,
  217,
  218,
  219,
  220,
  221,
  222,
  223,
  224,
  225,
  226,
  227,
  228,
  229,
  230,
  231,
  232,
  233,
  234,
  235,
  236,
  237,
  238,
  239,
  240,
  241,
  242,
  243,
  244,
  245,
  246,
  247,
  248,
  249,
  250,
  251,
]
`;

exports[`info releasedMoves() 3`] = `
Array [
  1,
  2,
  3,
  4,
  5,
  6,
  7,
  8,
  9,
  10,
  11,
  12,
  13,
  14,
  15,
  16,
  17,
  18,
  19,
  20,
  21,
  22,
  23,
  24,
  25,
  26,
  27,
  28,
  29,
  30,
  31,
  32,
  33,
  34,
  35,
  36,
  37,
  38,
  39,
  40,
  41,
  42,
  43,
  44,
  45,
  46,
  47,
  48,
  49,
  50,
  51,
  52,
  53,
  54,
  55,
  56,
  57,
  58,
  59,
  60,
  61,
  62,
  63,
  64,
  65,
  66,
  67,
  68,
  69,
  70,
  71,
  72,
  73,
  74,
  75,
  76,
  77,
  78,
  79,
  80,
  81,
  82,
  83,
  84,
  85,
  86,
  87,
  88,
  89,
  90,
  91,
  92,
  93,
  94,
  95,
  96,
  97,
  98,
  99,
  100,
  101,
  102,
  103,
  104,
  105,
  106,
  107,
  108,
  109,
  110,
  111,
  112,
  113,
  114,
  115,
  116,
  117,
  118,
  119,
  120,
  121,
  122,
  123,
  124,
  125,
  126,
  127,
  128,
  129,
  130,
  131,
  132,
  133,
  134,
  135,
  136,
  137,
  138,
  139,
  140,
  141,
  142,
  143,
  144,
  145,
  146,
  147,
  148,
  149,
  150,
  151,
  152,
  153,
  154,
  155,
  156,
  157,
  158,
  159,
  160,
  161,
  162,
  163,
  164,
  165,
  166,
  167,
  168,
  169,
  170,
  171,
  172,
  173,
  174,
  175,
  176,
  177,
  178,
  179,
  180,
  181,
  182,
  183,
  184,
  185,
  186,
  187,
  188,
  189,
  190,
  191,
  192,
  193,
  194,
  195,
  196,
  197,
  198,
  199,
  200,
  201,
  202,
  203,
  204,
  205,
  206,
  207,
  208,
  209,
  210,
  211,
  212,
  213,
  214,
  215,
  216,
  217,
  218,
  219,
  220,
  221,
  222,
  223,
  224,
  225,
  226,
  227,
  228,
  229,
  230,
  231,
  232,
  233,
  234,
  235,
  236,
  237,
  238,
  239,
  240,
  241,
  242,
  243,
  244,
  245,
  246,
  247,
  248,
  249,
  250,
  251,
  252,
  253,
  254,
  255,
  256,
  257,
  258,
  259,
  260,
  261,
  262,
  263,
  264,
  265,
  266,
  267,
  268,
  269,
  270,
  271,
  272,
  273,
  274,
  275,
  276,
  277,
  278,
  279,
  280,
  281,
  282,
  283,
  284,
  285,
  286,
  287,
  288,
  289,
  290,
  291,
  292,
  293,
  294,
  295,
  296,
  297,
  298,
  299,
  300,
  301,
  302,
  303,
  304,
  305,
  306,
  307,
  308,
  309,
  310,
  311,
  312,
  313,
  314,
  315,
  316,
  317,
  318,
  319,
  320,
  321,
  322,
  323,
  324,
  325,
  326,
  327,
  328,
  329,
  330,
  331,
  332,
  333,
  334,
  335,
  336,
  337,
  338,
  339,
  340,
  341,
  342,
  343,
  344,
  345,
  346,
  347,
  348,
  349,
  350,
  351,
  352,
  353,
  354,
]
`;

exports[`info releasedMoves() 4`] = `
Array [
  1,
  2,
  3,
  4,
  5,
  6,
  7,
  8,
  9,
  10,
  11,
  12,
  13,
  14,
  15,
  16,
  17,
  18,
  19,
  20,
  21,
  22,
  23,
  24,
  25,
  26,
  27,
  28,
  29,
  30,
  31,
  32,
  33,
  34,
  35,
  36,
  37,
  38,
  39,
  40,
  41,
  42,
  43,
  44,
  45,
  46,
  47,
  48,
  49,
  50,
  51,
  52,
  53,
  54,
  55,
  56,
  57,
  58,
  59,
  60,
  61,
  62,
  63,
  64,
  65,
  66,
  67,
  68,
  69,
  70,
  71,
  72,
  73,
  74,
  75,
  76,
  77,
  78,
  79,
  80,
  81,
  82,
  83,
  84,
  85,
  86,
  87,
  88,
  89,
  90,
  91,
  92,
  93,
  94,
  95,
  96,
  97,
  98,
  99,
  100,
  101,
  102,
  103,
  104,
  105,
  106,
  107,
  108,
  109,
  110,
  111,
  112,
  113,
  114,
  115,
  116,
  117,
  118,
  119,
  120,
  121,
  122,
  123,
  124,
  125,
  126,
  127,
  128,
  129,
  130,
  131,
  132,
  133,
  134,
  135,
  136,
  137,
  138,
  139,
  140,
  141,
  142,
  143,
  144,
  145,
  146,
  147,
  148,
  149,
  150,
  151,
  152,
  153,
  154,
  155,
  156,
  157,
  158,
  159,
  160,
  161,
  162,
  163,
  164,
  165,
  166,
  167,
  168,
  169,
  170,
  171,
  172,
  173,
  174,
  175,
  176,
  177,
  178,
  179,
  180,
  181,
  182,
  183,
  184,
  185,
  186,
  187,
  188,
  189,
  190,
  191,
  192,
  193,
  194,
  195,
  196,
  197,
  198,
  199,
  200,
  201,
  202,
  203,
  204,
  205,
  206,
  207,
  208,
  209,
  210,
  211,
  212,
  213,
  214,
  215,
  216,
  217,
  218,
  219,
  220,
  221,
  222,
  223,
  224,
  225,
  226,
  227,
  228,
  229,
  230,
  231,
  232,
  233,
  234,
  235,
  236,
  237,
  238,
  239,
  240,
  241,
  242,
  243,
  244,
  245,
  246,
  247,
  248,
  249,
  250,
  251,
  252,
  253,
  254,
  255,
  256,
  257,
  258,
  259,
  260,
  261,
  262,
  263,
  264,
  265,
  266,
  267,
  268,
  269,
  270,
  271,
  272,
  273,
  274,
  275,
  276,
  277,
  278,
  279,
  280,
  281,
  282,
  283,
  284,
  285,
  286,
  287,
  288,
  289,
  290,
  291,
  292,
  293,
  294,
  295,
  296,
  297,
  298,
  299,
  300,
  301,
  302,
  303,
  304,
  305,
  306,
  307,
  308,
  309,
  310,
  311,
  312,
  313,
  314,
  315,
  316,
  317,
  318,
  319,
  320,
  321,
  322,
  323,
  324,
  325,
  326,
  327,
  328,
  329,
  330,
  331,
  332,
  333,
  334,
  335,
  336,
  337,
  338,
  339,
  340,
  341,
  342,
  343,
  344,
  345,
  346,
  347,
  348,
  349,
  350,
  351,
  352,
  353,
  354,
  355,
  356,
  357,
  358,
  359,
  360,
  361,
  362,
  363,
  364,
  365,
  366,
  367,
  368,
  369,
  370,
  371,
  372,
  373,
  374,
  375,
  376,
  377,
  378,
  379,
  380,
  381,
  382,
  383,
  384,
  385,
  386,
  387,
  388,
  389,
  390,
  391,
  392,
  393,
  394,
  395,
  396,
  397,
  398,
  399,
  400,
  401,
  402,
  403,
  404,
  405,
  406,
  407,
  408,
  409,
  410,
  411,
  412,
  413,
  414,
  415,
  416,
  417,
  418,
  419,
  420,
  421,
  422,
  423,
  424,
  425,
  426,
  427,
  428,
  429,
  430,
  431,
  432,
  433,
  434,
  435,
  436,
  437,
  438,
  439,
  440,
  441,
  442,
  443,
  444,
  445,
  446,
  447,
  448,
  449,
  450,
  451,
  452,
  453,
  454,
  455,
  456,
  457,
  458,
  459,
  460,
  461,
  462,
  463,
  464,
  465,
  466,
  467,
]
`;

exports[`info releasedMoves() 5`] = `
Array [
  1,
  2,
  3,
  4,
  5,
  6,
  7,
  8,
  9,
  10,
  11,
  12,
  13,
  14,
  15,
  16,
  17,
  18,
  19,
  20,
  21,
  22,
  23,
  24,
  25,
  26,
  27,
  28,
  29,
  30,
  31,
  32,
  33,
  34,
  35,
  36,
  37,
  38,
  39,
  40,
  41,
  42,
  43,
  44,
  45,
  46,
  47,
  48,
  49,
  50,
  51,
  52,
  53,
  54,
  55,
  56,
  57,
  58,
  59,
  60,
  61,
  62,
  63,
  64,
  65,
  66,
  67,
  68,
  69,
  70,
  71,
  72,
  73,
  74,
  75,
  76,
  77,
  78,
  79,
  80,
  81,
  82,
  83,
  84,
  85,
  86,
  87,
  88,
  89,
  90,
  91,
  92,
  93,
  94,
  95,
  96,
  97,
  98,
  99,
  100,
  101,
  102,
  103,
  104,
  105,
  106,
  107,
  108,
  109,
  110,
  111,
  112,
  113,
  114,
  115,
  116,
  117,
  118,
  119,
  120,
  121,
  122,
  123,
  124,
  125,
  126,
  127,
  128,
  129,
  130,
  131,
  132,
  133,
  134,
  135,
  136,
  137,
  138,
  139,
  140,
  141,
  142,
  143,
  144,
  145,
  146,
  147,
  148,
  149,
  150,
  151,
  152,
  153,
  154,
  155,
  156,
  157,
  158,
  159,
  160,
  161,
  162,
  163,
  164,
  165,
  166,
  167,
  168,
  169,
  170,
  171,
  172,
  173,
  174,
  175,
  176,
  177,
  178,
  179,
  180,
  181,
  182,
  183,
  184,
  185,
  186,
  187,
  188,
  189,
  190,
  191,
  192,
  193,
  194,
  195,
  196,
  197,
  198,
  199,
  200,
  201,
  202,
  203,
  204,
  205,
  206,
  207,
  208,
  209,
  210,
  211,
  212,
  213,
  214,
  215,
  216,
  217,
  218,
  219,
  220,
  221,
  222,
  223,
  224,
  225,
  226,
  227,
  228,
  229,
  230,
  231,
  232,
  233,
  234,
  235,
  236,
  237,
  238,
  239,
  240,
  241,
  242,
  243,
  244,
  245,
  246,
  247,
  248,
  249,
  250,
  251,
  252,
  253,
  254,
  255,
  256,
  257,
  258,
  259,
  260,
  261,
  262,
  263,
  264,
  265,
  266,
  267,
  268,
  269,
  270,
  271,
  272,
  273,
  274,
  275,
  276,
  277,
  278,
  279,
  280,
  281,
  282,
  283,
  284,
  285,
  286,
  287,
  288,
  289,
  290,
  291,
  292,
  293,
  294,
  295,
  296,
  297,
  298,
  299,
  300,
  301,
  302,
  303,
  304,
  305,
  306,
  307,
  308,
  309,
  310,
  311,
  312,
  313,
  314,
  315,
  316,
  317,
  318,
  319,
  320,
  321,
  322,
  323,
  324,
  325,
  326,
  327,
  328,
  329,
  330,
  331,
  332,
  333,
  334,
  335,
  336,
  337,
  338,
  339,
  340,
  341,
  342,
  343,
  344,
  345,
  346,
  347,
  348,
  349,
  350,
  351,
  352,
  353,
  354,
  355,
  356,
  357,
  358,
  359,
  360,
  361,
  362,
  363,
  364,
  365,
  366,
  367,
  368,
  369,
  370,
  371,
  372,
  373,
  374,
  375,
  376,
  377,
  378,
  379,
  380,
  381,
  382,
  383,
  384,
  385,
  386,
  387,
  388,
  389,
  390,
  391,
  392,
  393,
  394,
  395,
  396,
  397,
  398,
  399,
  400,
  401,
  402,
  403,
  404,
  405,
  406,
  407,
  408,
  409,
  410,
  411,
  412,
  413,
  414,
  415,
  416,
  417,
  418,
  419,
  420,
  421,
  422,
  423,
  424,
  425,
  426,
  427,
  428,
  429,
  430,
  431,
  432,
  433,
  434,
  435,
  436,
  437,
  438,
  439,
  440,
  441,
  442,
  443,
  444,
  445,
  446,
  447,
  448,
  449,
  450,
  451,
  452,
  453,
  454,
  455,
  456,
  457,
  458,
  459,
  460,
  461,
  462,
  463,
  464,
  465,
  466,
  467,
  468,
  469,
  470,
  471,
  472,
  473,
  474,
  475,
  476,
  477,
  478,
  479,
  480,
  481,
  482,
  483,
  484,
  485,
  486,
  487,
  488,
  489,
  490,
  491,
  492,
  493,
  494,
  495,
  496,
  497,
  498,
  499,
  500,
  501,
  502,
  503,
  504,
  505,
  506,
  507,
  508,
  509,
  510,
  511,
  512,
  513,
  514,
  515,
  516,
  517,
  518,
  519,
  520,
  521,
  522,
  523,
  524,
  525,
  526,
  527,
  528,
  529,
  530,
  531,
  532,
  533,
  534,
  535,
  536,
  537,
  538,
  539,
  540,
  541,
  542,
  543,
  544,
  545,
  546,
  547,
  548,
  549,
  550,
  551,
  552,
  553,
  554,
  555,
  556,
  557,
  558,
  559,
]
`;

exports[`info releasedMoves() 6`] = `
Array [
  1,
  2,
  3,
  4,
  5,
  6,
  7,
  8,
  9,
  10,
  11,
  12,
  13,
  14,
  15,
  16,
  17,
  18,
  19,
  20,
  21,
  22,
  23,
  24,
  25,
  26,
  27,
  28,
  29,
  30,
  31,
  32,
  33,
  34,
  35,
  36,
  37,
  38,
  39,
  40,
  41,
  42,
  43,
  44,
  45,
  46,
  47,
  48,
  49,
  50,
  51,
  52,
  53,
  54,
  55,
  56,
  57,
  58,
  59,
  60,
  61,
  62,
  63,
  64,
  65,
  66,
  67,
  68,
  69,
  70,
  71,
  72,
  73,
  74,
  75,
  76,
  77,
  78,
  79,
  80,
  81,
  82,
  83,
  84,
  85,
  86,
  87,
  88,
  89,
  90,
  91,
  92,
  93,
  94,
  95,
  96,
  97,
  98,
  99,
  100,
  101,
  102,
  103,
  104,
  105,
  106,
  107,
  108,
  109,
  110,
  111,
  112,
  113,
  114,
  115,
  116,
  117,
  118,
  119,
  120,
  121,
  122,
  123,
  124,
  125,
  126,
  127,
  128,
  129,
  130,
  131,
  132,
  133,
  134,
  135,
  136,
  137,
  138,
  139,
  140,
  141,
  142,
  143,
  144,
  145,
  146,
  147,
  148,
  149,
  150,
  151,
  152,
  153,
  154,
  155,
  156,
  157,
  158,
  159,
  160,
  161,
  162,
  163,
  164,
  165,
  166,
  167,
  168,
  169,
  170,
  171,
  172,
  173,
  174,
  175,
  176,
  177,
  178,
  179,
  180,
  181,
  182,
  183,
  184,
  185,
  186,
  187,
  188,
  189,
  190,
  191,
  192,
  193,
  194,
  195,
  196,
  197,
  198,
  199,
  200,
  201,
  202,
  203,
  204,
  205,
  206,
  207,
  208,
  209,
  210,
  211,
  212,
  213,
  214,
  215,
  216,
  217,
  218,
  219,
  220,
  221,
  222,
  223,
  224,
  225,
  226,
  227,
  228,
  229,
  230,
  231,
  232,
  233,
  234,
  235,
  236,
  237,
  238,
  239,
  240,
  241,
  242,
  243,
  244,
  245,
  246,
  247,
  248,
  249,
  250,
  251,
  252,
  253,
  254,
  255,
  256,
  257,
  258,
  259,
  260,
  261,
  262,
  263,
  264,
  265,
  266,
  267,
  268,
  269,
  270,
  271,
  272,
  273,
  274,
  275,
  276,
  277,
  278,
  279,
  280,
  281,
  282,
  283,
  284,
  285,
  286,
  287,
  288,
  289,
  290,
  291,
  292,
  293,
  294,
  295,
  296,
  297,
  298,
  299,
  300,
  301,
  302,
  303,
  304,
  305,
  306,
  307,
  308,
  309,
  310,
  311,
  312,
  313,
  314,
  315,
  316,
  317,
  318,
  319,
  320,
  321,
  322,
  323,
  324,
  325,
  326,
  327,
  328,
  329,
  330,
  331,
  332,
  333,
  334,
  335,
  336,
  337,
  338,
  339,
  340,
  341,
  342,
  343,
  344,
  345,
  346,
  347,
  348,
  349,
  350,
  351,
  352,
  353,
  354,
  355,
  356,
  357,
  358,
  359,
  360,
  361,
  362,
  363,
  364,
  365,
  366,
  367,
  368,
  369,
  370,
  371,
  372,
  373,
  374,
  375,
  376,
  377,
  378,
  379,
  380,
  381,
  382,
  383,
  384,
  385,
  386,
  387,
  388,
  389,
  390,
  391,
  392,
  393,
  394,
  395,
  396,
  397,
  398,
  399,
  400,
  401,
  402,
  403,
  404,
  405,
  406,
  407,
  408,
  409,
  410,
  411,
  412,
  413,
  414,
  415,
  416,
  417,
  418,
  419,
  420,
  421,
  422,
  423,
  424,
  425,
  426,
  427,
  428,
  429,
  430,
  431,
  432,
  433,
  434,
  435,
  436,
  437,
  438,
  439,
  440,
  441,
  442,
  443,
  444,
  445,
  446,
  447,
  448,
  449,
  450,
  451,
  452,
  453,
  454,
  455,
  456,
  457,
  458,
  459,
  460,
  461,
  462,
  463,
  464,
  465,
  466,
  467,
  468,
  469,
  470,
  471,
  472,
  473,
  474,
  475,
  476,
  477,
  478,
  479,
  480,
  481,
  482,
  483,
  484,
  485,
  486,
  487,
  488,
  489,
  490,
  491,
  492,
  493,
  494,
  495,
  496,
  497,
  498,
  499,
  500,
  501,
  502,
  503,
  504,
  505,
  506,
  507,
  508,
  509,
  510,
  511,
  512,
  513,
  514,
  515,
  516,
  517,
  518,
  519,
  520,
  521,
  522,
  523,
  524,
  525,
  526,
  527,
  528,
  529,
  530,
  531,
  532,
  533,
  534,
  535,
  536,
  537,
  538,
  539,
  540,
  541,
  542,
  543,
  544,
  545,
  546,
  547,
  548,
  549,
  550,
  551,
  552,
  553,
  554,
  555,
  556,
  557,
  558,
  559,
  560,
  561,
  562,
  563,
  564,
  565,
  566,
  567,
  568,
  569,
  570,
  571,
  572,
  573,
  574,
  575,
  576,
  577,
  578,
  579,
  580,
  581,
  582,
  583,
  584,
  585,
  586,
  587,
  588,
  589,
  590,
  591,
  592,
  593,
  594,
  595,
  596,
  597,
  598,
  599,
  600,
  601,
  602,
  603,
  604,
  605,
  606,
  607,
  608,
  609,
  610,
  611,
  612,
  613,
  614,
  615,
  616,
  617,
  618,
  619,
  620,
  621,
]
`;

exports[`info releasedMoves() 7`] = `
Array [
  1,
  2,
  3,
  4,
  5,
  6,
  7,
  8,
  9,
  10,
  11,
  12,
  13,
  14,
  15,
  16,
  17,
  18,
  19,
  20,
  21,
  22,
  23,
  24,
  25,
  26,
  27,
  28,
  29,
  30,
  31,
  32,
  33,
  34,
  35,
  36,
  37,
  38,
  39,
  40,
  41,
  42,
  43,
  44,
  45,
  46,
  47,
  48,
  49,
  50,
  51,
  52,
  53,
  54,
  55,
  56,
  57,
  58,
  59,
  60,
  61,
  62,
  63,
  64,
  65,
  66,
  67,
  68,
  69,
  70,
  71,
  72,
  73,
  74,
  75,
  76,
  77,
  78,
  79,
  80,
  81,
  82,
  83,
  84,
  85,
  86,
  87,
  88,
  89,
  90,
  91,
  92,
  93,
  94,
  95,
  96,
  97,
  98,
  99,
  100,
  101,
  102,
  103,
  104,
  105,
  106,
  107,
  108,
  109,
  110,
  111,
  112,
  113,
  114,
  115,
  116,
  117,
  118,
  119,
  120,
  121,
  122,
  123,
  124,
  125,
  126,
  127,
  128,
  129,
  130,
  131,
  132,
  133,
  134,
  135,
  136,
  137,
  138,
  139,
  140,
  141,
  142,
  143,
  144,
  145,
  146,
  147,
  148,
  149,
  150,
  151,
  152,
  153,
  154,
  155,
  156,
  157,
  158,
  159,
  160,
  161,
  162,
  163,
  164,
  165,
  166,
  167,
  168,
  169,
  170,
  171,
  172,
  173,
  174,
  175,
  176,
  177,
  178,
  179,
  180,
  181,
  182,
  183,
  184,
  185,
  186,
  187,
  188,
  189,
  190,
  191,
  192,
  193,
  194,
  195,
  196,
  197,
  198,
  199,
  200,
  201,
  202,
  203,
  204,
  205,
  206,
  207,
  208,
  209,
  210,
  211,
  212,
  213,
  214,
  215,
  216,
  217,
  218,
  219,
  220,
  221,
  222,
  223,
  224,
  225,
  226,
  227,
  228,
  229,
  230,
  231,
  232,
  233,
  234,
  235,
  236,
  237,
  238,
  239,
  240,
  241,
  242,
  243,
  244,
  245,
  246,
  247,
  248,
  249,
  250,
  251,
  252,
  253,
  254,
  255,
  256,
  257,
  258,
  259,
  260,
  261,
  262,
  263,
  264,
  265,
  266,
  267,
  268,
  269,
  270,
  271,
  272,
  273,
  274,
  275,
  276,
  277,
  278,
  279,
  280,
  281,
  282,
  283,
  284,
  285,
  286,
  287,
  288,
  289,
  290,
  291,
  292,
  293,
  294,
  295,
  296,
  297,
  298,
  299,
  300,
  301,
  302,
  303,
  304,
  305,
  306,
  307,
  308,
  309,
  310,
  311,
  312,
  313,
  314,
  315,
  316,
  317,
  318,
  319,
  320,
  321,
  322,
  323,
  324,
  325,
  326,
  327,
  328,
  329,
  330,
  331,
  332,
  333,
  334,
  335,
  336,
  337,
  338,
  339,
  340,
  341,
  342,
  343,
  344,
  345,
  346,
  347,
  348,
  349,
  350,
  351,
  352,
  353,
  354,
  355,
  356,
  357,
  358,
  359,
  360,
  361,
  362,
  363,
  364,
  365,
  366,
  367,
  368,
  369,
  370,
  371,
  372,
  373,
  374,
  375,
  376,
  377,
  378,
  379,
  380,
  381,
  382,
  383,
  384,
  385,
  386,
  387,
  388,
  389,
  390,
  391,
  392,
  393,
  394,
  395,
  396,
  397,
  398,
  399,
  400,
  401,
  402,
  403,
  404,
  405,
  406,
  407,
  408,
  409,
  410,
  411,
  412,
  413,
  414,
  415,
  416,
  417,
  418,
  419,
  420,
  421,
  422,
  423,
  424,
  425,
  426,
  427,
  428,
  429,
  430,
  431,
  432,
  433,
  434,
  435,
  436,
  437,
  438,
  439,
  440,
  441,
  442,
  443,
  444,
  445,
  446,
  447,
  448,
  449,
  450,
  451,
  452,
  453,
  454,
  455,
  456,
  457,
  458,
  459,
  460,
  461,
  462,
  463,
  464,
  465,
  466,
  467,
  468,
  469,
  470,
  471,
  472,
  473,
  474,
  475,
  476,
  477,
  478,
  479,
  480,
  481,
  482,
  483,
  484,
  485,
  486,
  487,
  488,
  489,
  490,
  491,
  492,
  493,
  494,
  495,
  496,
  497,
  498,
  499,
  500,
  501,
  502,
  503,
  504,
  505,
  506,
  507,
  508,
  509,
  510,
  511,
  512,
  513,
  514,
  515,
  516,
  517,
  518,
  519,
  520,
  521,
  522,
  523,
  524,
  525,
  526,
  527,
  528,
  529,
  530,
  531,
  532,
  533,
  534,
  535,
  536,
  537,
  538,
  539,
  540,
  541,
  542,
  543,
  544,
  545,
  546,
  547,
  548,
  549,
  550,
  551,
  552,
  553,
  554,
  555,
  556,
  557,
  558,
  559,
  560,
  561,
  562,
  563,
  564,
  565,
  566,
  567,
  568,
  569,
  570,
  571,
  572,
  573,
  574,
  575,
  576,
  577,
  578,
  579,
  580,
  581,
  582,
  583,
  584,
  585,
  586,
  587,
  588,
  589,
  590,
  591,
  592,
  593,
  594,
  595,
  596,
  597,
  598,
  599,
  600,
  601,
  602,
  603,
  604,
  605,
  606,
  607,
  608,
  609,
  610,
  611,
  612,
  613,
  614,
  615,
  616,
  617,
  618,
  619,
  620,
  621,
  622,
  623,
  624,
  625,
  626,
  627,
  628,
  629,
  630,
  631,
  632,
  633,
  634,
  635,
  636,
  637,
  638,
  639,
  640,
  641,
  642,
  643,
  644,
  645,
  646,
  647,
  648,
  649,
  650,
  651,
  652,
  653,
  654,
  655,
  656,
  657,
  658,
  659,
  660,
  661,
  662,
  663,
  664,
  665,
  666,
  667,
  668,
  669,
  670,
  671,
  672,
  673,
  674,
  675,
  676,
  677,
  678,
  679,
  680,
  681,
  682,
  683,
  684,
  685,
  686,
  687,
  688,
  689,
  690,
  691,
  692,
  693,
  694,
  695,
  696,
  697,
  698,
  699,
  700,
  701,
]
`;

exports[`info releasedPokes() 1`] = `
Array [
  "1:0",
  "2:0",
  "3:0",
  "4:0",
  "5:0",
  "6:0",
  "7:0",
  "8:0",
  "9:0",
  "10:0",
  "11:0",
  "12:0",
  "13:0",
  "14:0",
  "15:0",
  "16:0",
  "17:0",
  "18:0",
  "19:0",
  "20:0",
  "21:0",
  "22:0",
  "23:0",
  "24:0",
  "25:0",
  "26:0",
  "27:0",
  "28:0",
  "29:0",
  "30:0",
  "31:0",
  "32:0",
  "33:0",
  "34:0",
  "35:0",
  "36:0",
  "37:0",
  "38:0",
  "39:0",
  "40:0",
  "41:0",
  "42:0",
  "43:0",
  "44:0",
  "45:0",
  "46:0",
  "47:0",
  "48:0",
  "49:0",
  "50:0",
  "51:0",
  "52:0",
  "53:0",
  "54:0",
  "55:0",
  "56:0",
  "57:0",
  "58:0",
  "59:0",
  "60:0",
  "61:0",
  "62:0",
  "63:0",
  "64:0",
  "65:0",
  "66:0",
  "67:0",
  "68:0",
  "69:0",
  "70:0",
  "71:0",
  "72:0",
  "73:0",
  "74:0",
  "75:0",
  "76:0",
  "77:0",
  "78:0",
  "79:0",
  "80:0",
  "81:0",
  "82:0",
  "83:0",
  "84:0",
  "85:0",
  "86:0",
  "87:0",
  "88:0",
  "89:0",
  "90:0",
  "91:0",
  "92:0",
  "93:0",
  "94:0",
  "95:0",
  "96:0",
  "97:0",
  "98:0",
  "99:0",
  "100:0",
  "101:0",
  "102:0",
  "103:0",
  "104:0",
  "105:0",
  "106:0",
  "107:0",
  "108:0",
  "109:0",
  "110:0",
  "111:0",
  "112:0",
  "113:0",
  "114:0",
  "115:0",
  "116:0",
  "117:0",
  "118:0",
  "119:0",
  "120:0",
  "121:0",
  "122:0",
  "123:0",
  "124:0",
  "125:0",
  "126:0",
  "127:0",
  "128:0",
  "129:0",
  "130:0",
  "131:0",
  "132:0",
  "133:0",
  "134:0",
  "135:0",
  "136:0",
  "137:0",
  "138:0",
  "139:0",
  "140:0",
  "141:0",
  "142:0",
  "143:0",
  "144:0",
  "145:0",
  "146:0",
  "147:0",
  "148:0",
  "149:0",
  "150:0",
  "151:0",
]
`;

exports[`info releasedPokes() 2`] = `
Array [
  "1:0",
  "2:0",
  "3:0",
  "4:0",
  "5:0",
  "6:0",
  "7:0",
  "8:0",
  "9:0",
  "10:0",
  "11:0",
  "12:0",
  "13:0",
  "14:0",
  "15:0",
  "16:0",
  "17:0",
  "18:0",
  "19:0",
  "20:0",
  "21:0",
  "22:0",
  "23:0",
  "24:0",
  "25:0",
  "26:0",
  "27:0",
  "28:0",
  "29:0",
  "30:0",
  "31:0",
  "32:0",
  "33:0",
  "34:0",
  "35:0",
  "36:0",
  "37:0",
  "38:0",
  "39:0",
  "40:0",
  "41:0",
  "42:0",
  "43:0",
  "44:0",
  "45:0",
  "46:0",
  "47:0",
  "48:0",
  "49:0",
  "50:0",
  "51:0",
  "52:0",
  "53:0",
  "54:0",
  "55:0",
  "56:0",
  "57:0",
  "58:0",
  "59:0",
  "60:0",
  "61:0",
  "62:0",
  "63:0",
  "64:0",
  "65:0",
  "66:0",
  "67:0",
  "68:0",
  "69:0",
  "70:0",
  "71:0",
  "72:0",
  "73:0",
  "74:0",
  "75:0",
  "76:0",
  "77:0",
  "78:0",
  "79:0",
  "80:0",
  "81:0",
  "82:0",
  "83:0",
  "84:0",
  "85:0",
  "86:0",
  "87:0",
  "88:0",
  "89:0",
  "90:0",
  "91:0",
  "92:0",
  "93:0",
  "94:0",
  "95:0",
  "96:0",
  "97:0",
  "98:0",
  "99:0",
  "100:0",
  "101:0",
  "102:0",
  "103:0",
  "104:0",
  "105:0",
  "106:0",
  "107:0",
  "108:0",
  "109:0",
  "110:0",
  "111:0",
  "112:0",
  "113:0",
  "114:0",
  "115:0",
  "116:0",
  "117:0",
  "118:0",
  "119:0",
  "120:0",
  "121:0",
  "122:0",
  "123:0",
  "124:0",
  "125:0",
  "126:0",
  "127:0",
  "128:0",
  "129:0",
  "130:0",
  "131:0",
  "132:0",
  "133:0",
  "134:0",
  "135:0",
  "136:0",
  "137:0",
  "138:0",
  "139:0",
  "140:0",
  "141:0",
  "142:0",
  "143:0",
  "144:0",
  "145:0",
  "146:0",
  "147:0",
  "148:0",
  "149:0",
  "150:0",
  "151:0",
  "152:0",
  "153:0",
  "154:0",
  "155:0",
  "156:0",
  "157:0",
  "158:0",
  "159:0",
  "160:0",
  "161:0",
  "162:0",
  "163:0",
  "164:0",
  "165:0",
  "166:0",
  "167:0",
  "168:0",
  "169:0",
  "170:0",
  "171:0",
  "172:0",
  "173:0",
  "174:0",
  "175:0",
  "176:0",
  "177:0",
  "178:0",
  "179:0",
  "180:0",
  "181:0",
  "182:0",
  "183:0",
  "184:0",
  "185:0",
  "186:0",
  "187:0",
  "188:0",
  "189:0",
  "190:0",
  "191:0",
  "192:0",
  "193:0",
  "194:0",
  "195:0",
  "196:0",
  "197:0",
  "198:0",
  "199:0",
  "200:0",
  "201:0",
  "202:0",
  "203:0",
  "204:0",
  "205:0",
  "206:0",
  "207:0",
  "208:0",
  "209:0",
  "210:0",
  "211:0",
  "212:0",
  "213:0",
  "214:0",
  "215:0",
  "216:0",
  "217:0",
  "218:0",
  "219:0",
  "220:0",
  "221:0",
  "222:0",
  "223:0",
  "224:0",
  "225:0",
  "226:0",
  "227:0",
  "228:0",
  "229:0",
  "230:0",
  "231:0",
  "232:0",
  "233:0",
  "234:0",
  "235:0",
  "236:0",
  "237:0",
  "238:0",
  "239:0",
  "240:0",
  "241:0",
  "242:0",
  "243:0",
  "244:0",
  "245:0",
  "246:0",
  "247:0",
  "248:0",
  "249:0",
  "250:0",
  "251:0",
]
`;

exports[`info releasedPokes() 3`] = `
Array [
  "1:0",
  "2:0",
  "3:0",
  "4:0",
  "5:0",
  "6:0",
  "7:0",
  "8:0",
  "9:0",
  "10:0",
  "11:0",
  "12:0",
  "13:0",
  "14:0",
  "15:0",
  "16:0",
  "17:0",
  "18:0",
  "19:0",
  "20:0",
  "21:0",
  "22:0",
  "23:0",
  "24:0",
  "25:0",
  "26:0",
  "27:0",
  "28:0",
  "29:0",
  "30:0",
  "31:0",
  "32:0",
  "33:0",
  "34:0",
  "35:0",
  "36:0",
  "37:0",
  "38:0",
  "39:0",
  "40:0",
  "41:0",
  "42:0",
  "43:0",
  "44:0",
  "45:0",
  "46:0",
  "47:0",
  "48:0",
  "49:0",
  "50:0",
  "51:0",
  "52:0",
  "53:0",
  "54:0",
  "55:0",
  "56:0",
  "57:0",
  "58:0",
  "59:0",
  "60:0",
  "61:0",
  "62:0",
  "63:0",
  "64:0",
  "65:0",
  "66:0",
  "67:0",
  "68:0",
  "69:0",
  "70:0",
  "71:0",
  "72:0",
  "73:0",
  "74:0",
  "75:0",
  "76:0",
  "77:0",
  "78:0",
  "79:0",
  "80:0",
  "81:0",
  "82:0",
  "83:0",
  "84:0",
  "85:0",
  "86:0",
  "87:0",
  "88:0",
  "89:0",
  "90:0",
  "91:0",
  "92:0",
  "93:0",
  "94:0",
  "95:0",
  "96:0",
  "97:0",
  "98:0",
  "99:0",
  "100:0",
  "101:0",
  "102:0",
  "103:0",
  "104:0",
  "105:0",
  "106:0",
  "107:0",
  "108:0",
  "109:0",
  "110:0",
  "111:0",
  "112:0",
  "113:0",
  "114:0",
  "115:0",
  "116:0",
  "117:0",
  "118:0",
  "119:0",
  "120:0",
  "121:0",
  "122:0",
  "123:0",
  "124:0",
  "125:0",
  "126:0",
  "127:0",
  "128:0",
  "129:0",
  "130:0",
  "131:0",
  "132:0",
  "133:0",
  "134:0",
  "135:0",
  "136:0",
  "137:0",
  "138:0",
  "139:0",
  "140:0",
  "141:0",
  "142:0",
  "143:0",
  "144:0",
  "145:0",
  "146:0",
  "147:0",
  "148:0",
  "149:0",
  "150:0",
  "151:0",
  "152:0",
  "153:0",
  "154:0",
  "155:0",
  "156:0",
  "157:0",
  "158:0",
  "159:0",
  "160:0",
  "161:0",
  "162:0",
  "163:0",
  "164:0",
  "165:0",
  "166:0",
  "167:0",
  "168:0",
  "169:0",
  "170:0",
  "171:0",
  "172:0",
  "173:0",
  "174:0",
  "175:0",
  "176:0",
  "177:0",
  "178:0",
  "179:0",
  "180:0",
  "181:0",
  "182:0",
  "183:0",
  "184:0",
  "185:0",
  "186:0",
  "187:0",
  "188:0",
  "189:0",
  "190:0",
  "191:0",
  "192:0",
  "193:0",
  "194:0",
  "195:0",
  "196:0",
  "197:0",
  "198:0",
  "199:0",
  "200:0",
  "201:0",
  "202:0",
  "203:0",
  "204:0",
  "205:0",
  "206:0",
  "207:0",
  "208:0",
  "209:0",
  "210:0",
  "211:0",
  "212:0",
  "213:0",
  "214:0",
  "215:0",
  "216:0",
  "217:0",
  "218:0",
  "219:0",
  "220:0",
  "221:0",
  "222:0",
  "223:0",
  "224:0",
  "225:0",
  "226:0",
  "227:0",
  "228:0",
  "229:0",
  "230:0",
  "231:0",
  "232:0",
  "233:0",
  "234:0",
  "235:0",
  "236:0",
  "237:0",
  "238:0",
  "239:0",
  "240:0",
  "241:0",
  "242:0",
  "243:0",
  "244:0",
  "245:0",
  "246:0",
  "247:0",
  "248:0",
  "249:0",
  "250:0",
  "251:0",
  "252:0",
  "253:0",
  "254:0",
  "255:0",
  "256:0",
  "257:0",
  "258:0",
  "259:0",
  "260:0",
  "261:0",
  "262:0",
  "263:0",
  "264:0",
  "265:0",
  "266:0",
  "267:0",
  "268:0",
  "269:0",
  "270:0",
  "271:0",
  "272:0",
  "273:0",
  "274:0",
  "275:0",
  "276:0",
  "277:0",
  "278:0",
  "279:0",
  "280:0",
  "281:0",
  "282:0",
  "283:0",
  "284:0",
  "285:0",
  "286:0",
  "287:0",
  "288:0",
  "289:0",
  "290:0",
  "291:0",
  "292:0",
  "293:0",
  "294:0",
  "295:0",
  "296:0",
  "297:0",
  "298:0",
  "299:0",
  "300:0",
  "301:0",
  "302:0",
  "303:0",
  "304:0",
  "305:0",
  "306:0",
  "307:0",
  "308:0",
  "309:0",
  "310:0",
  "311:0",
  "312:0",
  "313:0",
  "314:0",
  "315:0",
  "316:0",
  "317:0",
  "318:0",
  "319:0",
  "320:0",
  "321:0",
  "322:0",
  "323:0",
  "324:0",
  "325:0",
  "326:0",
  "327:0",
  "328:0",
  "329:0",
  "330:0",
  "331:0",
  "332:0",
  "333:0",
  "334:0",
  "335:0",
  "336:0",
  "337:0",
  "338:0",
  "339:0",
  "340:0",
  "341:0",
  "342:0",
  "343:0",
  "344:0",
  "345:0",
  "346:0",
  "347:0",
  "348:0",
  "349:0",
  "350:0",
  "351:0",
  "351:1",
  "351:2",
  "351:4",
  "352:0",
  "353:0",
  "354:0",
  "355:0",
  "356:0",
  "357:0",
  "358:0",
  "359:0",
  "360:0",
  "361:0",
  "362:0",
  "363:0",
  "364:0",
  "365:0",
  "366:0",
  "367:0",
  "368:0",
  "369:0",
  "370:0",
  "371:0",
  "372:0",
  "373:0",
  "374:0",
  "375:0",
  "376:0",
  "377:0",
  "378:0",
  "379:0",
  "380:0",
  "381:0",
  "382:0",
  "383:0",
  "384:0",
  "385:0",
  "386:0",
  "386:1",
  "386:2",
  "386:3",
]
`;

exports[`info releasedPokes() 4`] = `
Array [
  "1:0",
  "2:0",
  "3:0",
  "4:0",
  "5:0",
  "6:0",
  "7:0",
  "8:0",
  "9:0",
  "10:0",
  "11:0",
  "12:0",
  "13:0",
  "14:0",
  "15:0",
  "16:0",
  "17:0",
  "18:0",
  "19:0",
  "20:0",
  "21:0",
  "22:0",
  "23:0",
  "24:0",
  "25:0",
  "26:0",
  "27:0",
  "28:0",
  "29:0",
  "30:0",
  "31:0",
  "32:0",
  "33:0",
  "34:0",
  "35:0",
  "36:0",
  "37:0",
  "38:0",
  "39:0",
  "40:0",
  "41:0",
  "42:0",
  "43:0",
  "44:0",
  "45:0",
  "46:0",
  "47:0",
  "48:0",
  "49:0",
  "50:0",
  "51:0",
  "52:0",
  "53:0",
  "54:0",
  "55:0",
  "56:0",
  "57:0",
  "58:0",
  "59:0",
  "60:0",
  "61:0",
  "62:0",
  "63:0",
  "64:0",
  "65:0",
  "66:0",
  "67:0",
  "68:0",
  "69:0",
  "70:0",
  "71:0",
  "72:0",
  "73:0",
  "74:0",
  "75:0",
  "76:0",
  "77:0",
  "78:0",
  "79:0",
  "80:0",
  "81:0",
  "82:0",
  "83:0",
  "84:0",
  "85:0",
  "86:0",
  "87:0",
  "88:0",
  "89:0",
  "90:0",
  "91:0",
  "92:0",
  "93:0",
  "94:0",
  "95:0",
  "96:0",
  "97:0",
  "98:0",
  "99:0",
  "100:0",
  "101:0",
  "102:0",
  "103:0",
  "104:0",
  "105:0",
  "106:0",
  "107:0",
  "108:0",
  "109:0",
  "110:0",
  "111:0",
  "112:0",
  "113:0",
  "114:0",
  "115:0",
  "116:0",
  "117:0",
  "118:0",
  "119:0",
  "120:0",
  "121:0",
  "122:0",
  "123:0",
  "124:0",
  "125:0",
  "126:0",
  "127:0",
  "128:0",
  "129:0",
  "130:0",
  "131:0",
  "132:0",
  "133:0",
  "134:0",
  "135:0",
  "136:0",
  "137:0",
  "138:0",
  "139:0",
  "140:0",
  "141:0",
  "142:0",
  "143:0",
  "144:0",
  "145:0",
  "146:0",
  "147:0",
  "148:0",
  "149:0",
  "150:0",
  "151:0",
  "152:0",
  "153:0",
  "154:0",
  "155:0",
  "156:0",
  "157:0",
  "158:0",
  "159:0",
  "160:0",
  "161:0",
  "162:0",
  "163:0",
  "164:0",
  "165:0",
  "166:0",
  "167:0",
  "168:0",
  "169:0",
  "170:0",
  "171:0",
  "172:0",
  "173:0",
  "174:0",
  "175:0",
  "176:0",
  "177:0",
  "178:0",
  "179:0",
  "180:0",
  "181:0",
  "182:0",
  "183:0",
  "184:0",
  "185:0",
  "186:0",
  "187:0",
  "188:0",
  "189:0",
  "190:0",
  "191:0",
  "192:0",
  "193:0",
  "194:0",
  "195:0",
  "196:0",
  "197:0",
  "198:0",
  "199:0",
  "200:0",
  "201:0",
  "202:0",
  "203:0",
  "204:0",
  "205:0",
  "206:0",
  "207:0",
  "208:0",
  "209:0",
  "210:0",
  "211:0",
  "212:0",
  "213:0",
  "214:0",
  "215:0",
  "216:0",
  "217:0",
  "218:0",
  "219:0",
  "220:0",
  "221:0",
  "222:0",
  "223:0",
  "224:0",
  "225:0",
  "226:0",
  "227:0",
  "228:0",
  "229:0",
  "230:0",
  "231:0",
  "232:0",
  "233:0",
  "234:0",
  "235:0",
  "236:0",
  "237:0",
  "238:0",
  "239:0",
  "240:0",
  "241:0",
  "242:0",
  "243:0",
  "244:0",
  "245:0",
  "246:0",
  "247:0",
  "248:0",
  "249:0",
  "250:0",
  "251:0",
  "252:0",
  "253:0",
  "254:0",
  "255:0",
  "256:0",
  "257:0",
  "258:0",
  "259:0",
  "260:0",
  "261:0",
  "262:0",
  "263:0",
  "264:0",
  "265:0",
  "266:0",
  "267:0",
  "268:0",
  "269:0",
  "270:0",
  "271:0",
  "272:0",
  "273:0",
  "274:0",
  "275:0",
  "276:0",
  "277:0",
  "278:0",
  "279:0",
  "280:0",
  "281:0",
  "282:0",
  "283:0",
  "284:0",
  "285:0",
  "286:0",
  "287:0",
  "288:0",
  "289:0",
  "290:0",
  "291:0",
  "292:0",
  "293:0",
  "294:0",
  "295:0",
  "296:0",
  "297:0",
  "298:0",
  "299:0",
  "300:0",
  "301:0",
  "302:0",
  "303:0",
  "304:0",
  "305:0",
  "306:0",
  "307:0",
  "308:0",
  "309:0",
  "310:0",
  "311:0",
  "312:0",
  "313:0",
  "314:0",
  "315:0",
  "316:0",
  "317:0",
  "318:0",
  "319:0",
  "320:0",
  "321:0",
  "322:0",
  "323:0",
  "324:0",
  "325:0",
  "326:0",
  "327:0",
  "328:0",
  "329:0",
  "330:0",
  "331:0",
  "332:0",
  "333:0",
  "334:0",
  "335:0",
  "336:0",
  "337:0",
  "338:0",
  "339:0",
  "340:0",
  "341:0",
  "342:0",
  "343:0",
  "344:0",
  "345:0",
  "346:0",
  "347:0",
  "348:0",
  "349:0",
  "350:0",
  "351:0",
  "351:1",
  "351:2",
  "351:4",
  "352:0",
  "353:0",
  "354:0",
  "355:0",
  "356:0",
  "357:0",
  "358:0",
  "359:0",
  "360:0",
  "361:0",
  "362:0",
  "363:0",
  "364:0",
  "365:0",
  "366:0",
  "367:0",
  "368:0",
  "369:0",
  "370:0",
  "371:0",
  "372:0",
  "373:0",
  "374:0",
  "375:0",
  "376:0",
  "377:0",
  "378:0",
  "379:0",
  "380:0",
  "381:0",
  "382:0",
  "383:0",
  "384:0",
  "385:0",
  "386:0",
  "386:1",
  "386:2",
  "386:3",
  "387:0",
  "388:0",
  "389:0",
  "390:0",
  "391:0",
  "392:0",
  "393:0",
  "394:0",
  "395:0",
  "396:0",
  "397:0",
  "398:0",
  "399:0",
  "400:0",
  "401:0",
  "402:0",
  "403:0",
  "404:0",
  "405:0",
  "406:0",
  "407:0",
  "408:0",
  "409:0",
  "410:0",
  "411:0",
  "412:0",
  "412:1",
  "412:2",
  "413:0",
  "413:1",
  "413:2",
  "414:0",
  "415:0",
  "416:0",
  "417:0",
  "418:0",
  "419:0",
  "420:0",
  "421:0",
  "421:1",
  "422:0",
  "423:0",
  "424:0",
  "425:0",
  "426:0",
  "427:0",
  "428:0",
  "429:0",
  "430:0",
  "431:0",
  "432:0",
  "433:0",
  "434:0",
  "435:0",
  "436:0",
  "437:0",
  "438:0",
  "439:0",
  "440:0",
  "441:0",
  "442:0",
  "443:0",
  "444:0",
  "445:0",
  "446:0",
  "447:0",
  "448:0",
  "449:0",
  "450:0",
  "451:0",
  "452:0",
  "453:0",
  "454:0",
  "455:0",
  "456:0",
  "457:0",
  "458:0",
  "459:0",
  "460:0",
  "461:0",
  "462:0",
  "463:0",
  "464:0",
  "465:0",
  "466:0",
  "467:0",
  "468:0",
  "469:0",
  "470:0",
  "471:0",
  "472:0",
  "473:0",
  "474:0",
  "475:0",
  "476:0",
  "477:0",
  "478:0",
  "479:0",
  "479:1",
  "479:2",
  "479:3",
  "479:4",
  "479:5",
  "480:0",
  "481:0",
  "482:0",
  "483:0",
  "484:0",
  "485:0",
  "486:0",
  "487:0",
  "487:1",
  "488:0",
  "489:0",
  "490:0",
  "491:0",
  "492:0",
  "492:1",
  "493:0",
  "493:1",
  "493:2",
  "493:3",
  "493:4",
  "493:5",
  "493:6",
  "493:7",
  "493:8",
  "493:9",
  "493:10",
  "493:11",
  "493:12",
  "493:13",
  "493:14",
  "493:15",
  "493:16",
]
`;

exports[`info releasedPokes() 5`] = `
Array [
  "1:0",
  "2:0",
  "3:0",
  "4:0",
  "5:0",
  "6:0",
  "7:0",
  "8:0",
  "9:0",
  "10:0",
  "11:0",
  "12:0",
  "13:0",
  "14:0",
  "15:0",
  "16:0",
  "17:0",
  "18:0",
  "19:0",
  "20:0",
  "21:0",
  "22:0",
  "23:0",
  "24:0",
  "25:0",
  "26:0",
  "27:0",
  "28:0",
  "29:0",
  "30:0",
  "31:0",
  "32:0",
  "33:0",
  "34:0",
  "35:0",
  "36:0",
  "37:0",
  "38:0",
  "39:0",
  "40:0",
  "41:0",
  "42:0",
  "43:0",
  "44:0",
  "45:0",
  "46:0",
  "47:0",
  "48:0",
  "49:0",
  "50:0",
  "51:0",
  "52:0",
  "53:0",
  "54:0",
  "55:0",
  "56:0",
  "57:0",
  "58:0",
  "59:0",
  "60:0",
  "61:0",
  "62:0",
  "63:0",
  "64:0",
  "65:0",
  "66:0",
  "67:0",
  "68:0",
  "69:0",
  "70:0",
  "71:0",
  "72:0",
  "73:0",
  "74:0",
  "75:0",
  "76:0",
  "77:0",
  "78:0",
  "79:0",
  "80:0",
  "81:0",
  "82:0",
  "83:0",
  "84:0",
  "85:0",
  "86:0",
  "87:0",
  "88:0",
  "89:0",
  "90:0",
  "91:0",
  "92:0",
  "93:0",
  "94:0",
  "95:0",
  "96:0",
  "97:0",
  "98:0",
  "99:0",
  "100:0",
  "101:0",
  "102:0",
  "103:0",
  "104:0",
  "105:0",
  "106:0",
  "107:0",
  "108:0",
  "109:0",
  "110:0",
  "111:0",
  "112:0",
  "113:0",
  "114:0",
  "115:0",
  "116:0",
  "117:0",
  "118:0",
  "119:0",
  "120:0",
  "121:0",
  "122:0",
  "123:0",
  "124:0",
  "125:0",
  "126:0",
  "127:0",
  "128:0",
  "129:0",
  "130:0",
  "131:0",
  "132:0",
  "133:0",
  "134:0",
  "135:0",
  "136:0",
  "137:0",
  "138:0",
  "139:0",
  "140:0",
  "141:0",
  "142:0",
  "143:0",
  "144:0",
  "145:0",
  "146:0",
  "147:0",
  "148:0",
  "149:0",
  "150:0",
  "151:0",
  "152:0",
  "153:0",
  "154:0",
  "155:0",
  "156:0",
  "157:0",
  "158:0",
  "159:0",
  "160:0",
  "161:0",
  "162:0",
  "163:0",
  "164:0",
  "165:0",
  "166:0",
  "167:0",
  "168:0",
  "169:0",
  "170:0",
  "171:0",
  "172:0",
  "173:0",
  "174:0",
  "175:0",
  "176:0",
  "177:0",
  "178:0",
  "179:0",
  "180:0",
  "181:0",
  "182:0",
  "183:0",
  "184:0",
  "185:0",
  "186:0",
  "187:0",
  "188:0",
  "189:0",
  "190:0",
  "191:0",
  "192:0",
  "193:0",
  "194:0",
  "195:0",
  "196:0",
  "197:0",
  "198:0",
  "199:0",
  "200:0",
  "201:0",
  "202:0",
  "203:0",
  "204:0",
  "205:0",
  "206:0",
  "207:0",
  "208:0",
  "209:0",
  "210:0",
  "211:0",
  "212:0",
  "213:0",
  "214:0",
  "215:0",
  "216:0",
  "217:0",
  "218:0",
  "219:0",
  "220:0",
  "221:0",
  "222:0",
  "223:0",
  "224:0",
  "225:0",
  "226:0",
  "227:0",
  "228:0",
  "229:0",
  "230:0",
  "231:0",
  "232:0",
  "233:0",
  "234:0",
  "235:0",
  "236:0",
  "237:0",
  "238:0",
  "239:0",
  "240:0",
  "241:0",
  "242:0",
  "243:0",
  "244:0",
  "245:0",
  "246:0",
  "247:0",
  "248:0",
  "249:0",
  "250:0",
  "251:0",
  "252:0",
  "253:0",
  "254:0",
  "255:0",
  "256:0",
  "257:0",
  "258:0",
  "259:0",
  "260:0",
  "261:0",
  "262:0",
  "263:0",
  "264:0",
  "265:0",
  "266:0",
  "267:0",
  "268:0",
  "269:0",
  "270:0",
  "271:0",
  "272:0",
  "273:0",
  "274:0",
  "275:0",
  "276:0",
  "277:0",
  "278:0",
  "279:0",
  "280:0",
  "281:0",
  "282:0",
  "283:0",
  "284:0",
  "285:0",
  "286:0",
  "287:0",
  "288:0",
  "289:0",
  "290:0",
  "291:0",
  "292:0",
  "293:0",
  "294:0",
  "295:0",
  "296:0",
  "297:0",
  "298:0",
  "299:0",
  "300:0",
  "301:0",
  "302:0",
  "303:0",
  "304:0",
  "305:0",
  "306:0",
  "307:0",
  "308:0",
  "309:0",
  "310:0",
  "311:0",
  "312:0",
  "313:0",
  "314:0",
  "315:0",
  "316:0",
  "317:0",
  "318:0",
  "319:0",
  "320:0",
  "321:0",
  "322:0",
  "323:0",
  "324:0",
  "325:0",
  "326:0",
  "327:0",
  "328:0",
  "329:0",
  "330:0",
  "331:0",
  "332:0",
  "333:0",
  "334:0",
  "335:0",
  "336:0",
  "337:0",
  "338:0",
  "339:0",
  "340:0",
  "341:0",
  "342:0",
  "343:0",
  "344:0",
  "345:0",
  "346:0",
  "347:0",
  "348:0",
  "349:0",
  "350:0",
  "351:0",
  "351:1",
  "351:2",
  "351:4",
  "352:0",
  "353:0",
  "354:0",
  "355:0",
  "356:0",
  "357:0",
  "358:0",
  "359:0",
  "360:0",
  "361:0",
  "362:0",
  "363:0",
  "364:0",
  "365:0",
  "366:0",
  "367:0",
  "368:0",
  "369:0",
  "370:0",
  "371:0",
  "372:0",
  "373:0",
  "374:0",
  "375:0",
  "376:0",
  "377:0",
  "378:0",
  "379:0",
  "380:0",
  "381:0",
  "382:0",
  "383:0",
  "384:0",
  "385:0",
  "386:0",
  "386:1",
  "386:2",
  "386:3",
  "387:0",
  "388:0",
  "389:0",
  "390:0",
  "391:0",
  "392:0",
  "393:0",
  "394:0",
  "395:0",
  "396:0",
  "397:0",
  "398:0",
  "399:0",
  "400:0",
  "401:0",
  "402:0",
  "403:0",
  "404:0",
  "405:0",
  "406:0",
  "407:0",
  "408:0",
  "409:0",
  "410:0",
  "411:0",
  "412:0",
  "412:1",
  "412:2",
  "413:0",
  "413:1",
  "413:2",
  "414:0",
  "415:0",
  "416:0",
  "417:0",
  "418:0",
  "419:0",
  "420:0",
  "421:0",
  "421:1",
  "422:0",
  "423:0",
  "424:0",
  "425:0",
  "426:0",
  "427:0",
  "428:0",
  "429:0",
  "430:0",
  "431:0",
  "432:0",
  "433:0",
  "434:0",
  "435:0",
  "436:0",
  "437:0",
  "438:0",
  "439:0",
  "440:0",
  "441:0",
  "442:0",
  "443:0",
  "444:0",
  "445:0",
  "446:0",
  "447:0",
  "448:0",
  "449:0",
  "450:0",
  "451:0",
  "452:0",
  "453:0",
  "454:0",
  "455:0",
  "456:0",
  "457:0",
  "458:0",
  "459:0",
  "460:0",
  "461:0",
  "462:0",
  "463:0",
  "464:0",
  "465:0",
  "466:0",
  "467:0",
  "468:0",
  "469:0",
  "470:0",
  "471:0",
  "472:0",
  "473:0",
  "474:0",
  "475:0",
  "476:0",
  "477:0",
  "478:0",
  "479:0",
  "479:1",
  "479:2",
  "479:3",
  "479:4",
  "479:5",
  "480:0",
  "481:0",
  "482:0",
  "483:0",
  "484:0",
  "485:0",
  "486:0",
  "487:0",
  "487:1",
  "488:0",
  "489:0",
  "490:0",
  "491:0",
  "492:0",
  "492:1",
  "493:0",
  "493:1",
  "493:2",
  "493:3",
  "493:4",
  "493:5",
  "493:6",
  "493:7",
  "493:8",
  "493:9",
  "493:10",
  "493:11",
  "493:12",
  "493:13",
  "493:14",
  "493:15",
  "493:16",
  "494:0",
  "495:0",
  "496:0",
  "497:0",
  "498:0",
  "499:0",
  "500:0",
  "501:0",
  "502:0",
  "503:0",
  "504:0",
  "505:0",
  "506:0",
  "507:0",
  "508:0",
  "509:0",
  "510:0",
  "511:0",
  "512:0",
  "513:0",
  "514:0",
  "515:0",
  "516:0",
  "517:0",
  "518:0",
  "519:0",
  "520:0",
  "521:0",
  "522:0",
  "523:0",
  "524:0",
  "525:0",
  "526:0",
  "527:0",
  "528:0",
  "529:0",
  "530:0",
  "531:0",
  "532:0",
  "533:0",
  "534:0",
  "535:0",
  "536:0",
  "537:0",
  "538:0",
  "539:0",
  "540:0",
  "541:0",
  "542:0",
  "543:0",
  "544:0",
  "545:0",
  "546:0",
  "547:0",
  "548:0",
  "549:0",
  "550:0",
  "551:0",
  "552:0",
  "553:0",
  "554:0",
  "555:0",
  "555:1",
  "556:0",
  "557:0",
  "558:0",
  "559:0",
  "560:0",
  "561:0",
  "562:0",
  "563:0",
  "564:0",
  "565:0",
  "566:0",
  "567:0",
  "568:0",
  "569:0",
  "570:0",
  "571:0",
  "572:0",
  "573:0",
  "574:0",
  "575:0",
  "576:0",
  "577:0",
  "578:0",
  "579:0",
  "580:0",
  "581:0",
  "582:0",
  "583:0",
  "584:0",
  "585:0",
  "586:0",
  "587:0",
  "588:0",
  "589:0",
  "590:0",
  "591:0",
  "592:0",
  "593:0",
  "594:0",
  "595:0",
  "596:0",
  "597:0",
  "598:0",
  "599:0",
  "600:0",
  "601:0",
  "602:0",
  "603:0",
  "604:0",
  "605:0",
  "606:0",
  "607:0",
  "608:0",
  "609:0",
  "610:0",
  "611:0",
  "612:0",
  "613:0",
  "614:0",
  "615:0",
  "616:0",
  "617:0",
  "618:0",
  "619:0",
  "620:0",
  "621:0",
  "622:0",
  "623:0",
  "624:0",
  "625:0",
  "626:0",
  "627:0",
  "628:0",
  "629:0",
  "630:0",
  "631:0",
  "632:0",
  "633:0",
  "634:0",
  "635:0",
  "636:0",
  "637:0",
  "638:0",
  "639:0",
  "640:0",
  "641:0",
  "641:1",
  "642:0",
  "642:1",
  "643:0",
  "644:0",
  "645:0",
  "645:1",
  "646:0",
  "646:1",
  "646:2",
  "647:0",
  "647:1",
  "648:0",
  "648:1",
  "649:0",
  "649:1",
  "649:2",
  "649:3",
  "649:4",
]
`;

exports[`info releasedPokes() 6`] = `
Array [
  "1:0",
  "2:0",
  "3:0",
  "3:1",
  "4:0",
  "5:0",
  "6:0",
  "6:1",
  "6:2",
  "7:0",
  "8:0",
  "9:0",
  "9:1",
  "10:0",
  "11:0",
  "12:0",
  "13:0",
  "14:0",
  "15:0",
  "15:1",
  "16:0",
  "17:0",
  "18:0",
  "18:1",
  "19:0",
  "20:0",
  "21:0",
  "22:0",
  "23:0",
  "24:0",
  "25:0",
  "26:0",
  "27:0",
  "28:0",
  "29:0",
  "30:0",
  "31:0",
  "32:0",
  "33:0",
  "34:0",
  "35:0",
  "36:0",
  "37:0",
  "38:0",
  "39:0",
  "40:0",
  "41:0",
  "42:0",
  "43:0",
  "44:0",
  "45:0",
  "46:0",
  "47:0",
  "48:0",
  "49:0",
  "50:0",
  "51:0",
  "52:0",
  "53:0",
  "54:0",
  "55:0",
  "56:0",
  "57:0",
  "58:0",
  "59:0",
  "60:0",
  "61:0",
  "62:0",
  "63:0",
  "64:0",
  "65:0",
  "65:1",
  "66:0",
  "67:0",
  "68:0",
  "69:0",
  "70:0",
  "71:0",
  "72:0",
  "73:0",
  "74:0",
  "75:0",
  "76:0",
  "77:0",
  "78:0",
  "79:0",
  "80:0",
  "80:1",
  "81:0",
  "82:0",
  "83:0",
  "84:0",
  "85:0",
  "86:0",
  "87:0",
  "88:0",
  "89:0",
  "90:0",
  "91:0",
  "92:0",
  "93:0",
  "94:0",
  "94:1",
  "95:0",
  "96:0",
  "97:0",
  "98:0",
  "99:0",
  "100:0",
  "101:0",
  "102:0",
  "103:0",
  "104:0",
  "105:0",
  "106:0",
  "107:0",
  "108:0",
  "109:0",
  "110:0",
  "111:0",
  "112:0",
  "113:0",
  "114:0",
  "115:0",
  "115:1",
  "116:0",
  "117:0",
  "118:0",
  "119:0",
  "120:0",
  "121:0",
  "122:0",
  "123:0",
  "124:0",
  "125:0",
  "126:0",
  "127:0",
  "127:1",
  "128:0",
  "129:0",
  "130:0",
  "130:1",
  "131:0",
  "132:0",
  "133:0",
  "134:0",
  "135:0",
  "136:0",
  "137:0",
  "138:0",
  "139:0",
  "140:0",
  "141:0",
  "142:0",
  "142:1",
  "143:0",
  "144:0",
  "145:0",
  "146:0",
  "147:0",
  "148:0",
  "149:0",
  "150:0",
  "150:1",
  "150:2",
  "151:0",
  "152:0",
  "153:0",
  "154:0",
  "155:0",
  "156:0",
  "157:0",
  "158:0",
  "159:0",
  "160:0",
  "161:0",
  "162:0",
  "163:0",
  "164:0",
  "165:0",
  "166:0",
  "167:0",
  "168:0",
  "169:0",
  "170:0",
  "171:0",
  "172:0",
  "173:0",
  "174:0",
  "175:0",
  "176:0",
  "177:0",
  "178:0",
  "179:0",
  "180:0",
  "181:0",
  "181:1",
  "182:0",
  "183:0",
  "184:0",
  "185:0",
  "186:0",
  "187:0",
  "188:0",
  "189:0",
  "190:0",
  "191:0",
  "192:0",
  "193:0",
  "194:0",
  "195:0",
  "196:0",
  "197:0",
  "198:0",
  "199:0",
  "200:0",
  "201:0",
  "202:0",
  "203:0",
  "204:0",
  "205:0",
  "206:0",
  "207:0",
  "208:0",
  "208:1",
  "209:0",
  "210:0",
  "211:0",
  "212:0",
  "212:1",
  "213:0",
  "214:0",
  "214:1",
  "215:0",
  "216:0",
  "217:0",
  "218:0",
  "219:0",
  "220:0",
  "221:0",
  "222:0",
  "223:0",
  "224:0",
  "225:0",
  "226:0",
  "227:0",
  "228:0",
  "229:0",
  "229:1",
  "230:0",
  "231:0",
  "232:0",
  "233:0",
  "234:0",
  "235:0",
  "236:0",
  "237:0",
  "238:0",
  "239:0",
  "240:0",
  "241:0",
  "242:0",
  "243:0",
  "244:0",
  "245:0",
  "246:0",
  "247:0",
  "248:0",
  "248:1",
  "249:0",
  "250:0",
  "251:0",
  "252:0",
  "253:0",
  "254:0",
  "254:1",
  "255:0",
  "256:0",
  "257:0",
  "257:1",
  "258:0",
  "259:0",
  "260:0",
  "260:1",
  "261:0",
  "262:0",
  "263:0",
  "264:0",
  "265:0",
  "266:0",
  "267:0",
  "268:0",
  "269:0",
  "270:0",
  "271:0",
  "272:0",
  "273:0",
  "274:0",
  "275:0",
  "276:0",
  "277:0",
  "278:0",
  "279:0",
  "280:0",
  "281:0",
  "282:0",
  "282:1",
  "283:0",
  "284:0",
  "285:0",
  "286:0",
  "287:0",
  "288:0",
  "289:0",
  "290:0",
  "291:0",
  "292:0",
  "293:0",
  "294:0",
  "295:0",
  "296:0",
  "297:0",
  "298:0",
  "299:0",
  "300:0",
  "301:0",
  "302:0",
  "302:1",
  "303:0",
  "303:1",
  "304:0",
  "305:0",
  "306:0",
  "306:1",
  "307:0",
  "308:0",
  "308:1",
  "309:0",
  "310:0",
  "310:1",
  "311:0",
  "312:0",
  "313:0",
  "314:0",
  "315:0",
  "316:0",
  "317:0",
  "318:0",
  "319:0",
  "319:1",
  "320:0",
  "321:0",
  "322:0",
  "323:0",
  "323:1",
  "324:0",
  "325:0",
  "326:0",
  "327:0",
  "328:0",
  "329:0",
  "330:0",
  "331:0",
  "332:0",
  "333:0",
  "334:0",
  "334:1",
  "335:0",
  "336:0",
  "337:0",
  "338:0",
  "339:0",
  "340:0",
  "341:0",
  "342:0",
  "343:0",
  "344:0",
  "345:0",
  "346:0",
  "347:0",
  "348:0",
  "349:0",
  "350:0",
  "351:0",
  "351:1",
  "351:2",
  "351:4",
  "352:0",
  "353:0",
  "354:0",
  "354:1",
  "355:0",
  "356:0",
  "357:0",
  "358:0",
  "359:0",
  "359:1",
  "360:0",
  "361:0",
  "362:0",
  "362:1",
  "363:0",
  "364:0",
  "365:0",
  "366:0",
  "367:0",
  "368:0",
  "369:0",
  "370:0",
  "371:0",
  "372:0",
  "373:0",
  "373:1",
  "374:0",
  "375:0",
  "376:0",
  "376:1",
  "377:0",
  "378:0",
  "379:0",
  "380:0",
  "380:1",
  "381:0",
  "381:1",
  "382:0",
  "382:1",
  "383:0",
  "383:1",
  "384:0",
  "384:1",
  "385:0",
  "386:0",
  "386:1",
  "386:2",
  "386:3",
  "387:0",
  "388:0",
  "389:0",
  "390:0",
  "391:0",
  "392:0",
  "393:0",
  "394:0",
  "395:0",
  "396:0",
  "397:0",
  "398:0",
  "399:0",
  "400:0",
  "401:0",
  "402:0",
  "403:0",
  "404:0",
  "405:0",
  "406:0",
  "407:0",
  "408:0",
  "409:0",
  "410:0",
  "411:0",
  "412:0",
  "412:1",
  "412:2",
  "413:0",
  "413:1",
  "413:2",
  "414:0",
  "415:0",
  "416:0",
  "417:0",
  "418:0",
  "419:0",
  "420:0",
  "421:0",
  "421:1",
  "422:0",
  "423:0",
  "424:0",
  "425:0",
  "426:0",
  "427:0",
  "428:0",
  "428:1",
  "429:0",
  "430:0",
  "431:0",
  "432:0",
  "433:0",
  "434:0",
  "435:0",
  "436:0",
  "437:0",
  "438:0",
  "439:0",
  "440:0",
  "441:0",
  "442:0",
  "443:0",
  "444:0",
  "445:0",
  "445:1",
  "446:0",
  "447:0",
  "448:0",
  "448:1",
  "449:0",
  "450:0",
  "451:0",
  "452:0",
  "453:0",
  "454:0",
  "455:0",
  "456:0",
  "457:0",
  "458:0",
  "459:0",
  "460:0",
  "460:1",
  "461:0",
  "462:0",
  "463:0",
  "464:0",
  "465:0",
  "466:0",
  "467:0",
  "468:0",
  "469:0",
  "470:0",
  "471:0",
  "472:0",
  "473:0",
  "474:0",
  "475:0",
  "475:1",
  "476:0",
  "477:0",
  "478:0",
  "479:0",
  "479:1",
  "479:2",
  "479:3",
  "479:4",
  "479:5",
  "480:0",
  "481:0",
  "482:0",
  "483:0",
  "484:0",
  "485:0",
  "486:0",
  "487:0",
  "487:1",
  "488:0",
  "489:0",
  "490:0",
  "491:0",
  "492:0",
  "492:1",
  "493:0",
  "493:1",
  "493:2",
  "493:3",
  "493:4",
  "493:5",
  "493:6",
  "493:7",
  "493:8",
  "493:9",
  "493:10",
  "493:11",
  "493:12",
  "493:13",
  "493:14",
  "493:15",
  "493:16",
  "493:17",
  "494:0",
  "495:0",
  "496:0",
  "497:0",
  "498:0",
  "499:0",
  "500:0",
  "501:0",
  "502:0",
  "503:0",
  "504:0",
  "505:0",
  "506:0",
  "507:0",
  "508:0",
  "509:0",
  "510:0",
  "511:0",
  "512:0",
  "513:0",
  "514:0",
  "515:0",
  "516:0",
  "517:0",
  "518:0",
  "519:0",
  "520:0",
  "521:0",
  "522:0",
  "523:0",
  "524:0",
  "525:0",
  "526:0",
  "527:0",
  "528:0",
  "529:0",
  "530:0",
  "531:0",
  "531:1",
  "532:0",
  "533:0",
  "534:0",
  "535:0",
  "536:0",
  "537:0",
  "538:0",
  "539:0",
  "540:0",
  "541:0",
  "542:0",
  "543:0",
  "544:0",
  "545:0",
  "546:0",
  "547:0",
  "548:0",
  "549:0",
  "550:0",
  "551:0",
  "552:0",
  "553:0",
  "554:0",
  "555:0",
  "555:1",
  "556:0",
  "557:0",
  "558:0",
  "559:0",
  "560:0",
  "561:0",
  "562:0",
  "563:0",
  "564:0",
  "565:0",
  "566:0",
  "567:0",
  "568:0",
  "569:0",
  "570:0",
  "571:0",
  "572:0",
  "573:0",
  "574:0",
  "575:0",
  "576:0",
  "577:0",
  "578:0",
  "579:0",
  "580:0",
  "581:0",
  "582:0",
  "583:0",
  "584:0",
  "585:0",
  "586:0",
  "587:0",
  "588:0",
  "589:0",
  "590:0",
  "591:0",
  "592:0",
  "593:0",
  "594:0",
  "595:0",
  "596:0",
  "597:0",
  "598:0",
  "599:0",
  "600:0",
  "601:0",
  "602:0",
  "603:0",
  "604:0",
  "605:0",
  "606:0",
  "607:0",
  "608:0",
  "609:0",
  "610:0",
  "611:0",
  "612:0",
  "613:0",
  "614:0",
  "615:0",
  "616:0",
  "617:0",
  "618:0",
  "619:0",
  "620:0",
  "621:0",
  "622:0",
  "623:0",
  "624:0",
  "625:0",
  "626:0",
  "627:0",
  "628:0",
  "629:0",
  "630:0",
  "631:0",
  "632:0",
  "633:0",
  "634:0",
  "635:0",
  "636:0",
  "637:0",
  "638:0",
  "639:0",
  "640:0",
  "641:0",
  "641:1",
  "642:0",
  "642:1",
  "643:0",
  "644:0",
  "645:0",
  "645:1",
  "646:0",
  "646:1",
  "646:2",
  "647:0",
  "647:1",
  "648:0",
  "648:1",
  "649:0",
  "649:1",
  "649:2",
  "649:3",
  "649:4",
  "650:0",
  "651:0",
  "652:0",
  "653:0",
  "654:0",
  "655:0",
  "656:0",
  "657:0",
  "658:0",
  "659:0",
  "660:0",
  "661:0",
  "662:0",
  "663:0",
  "664:0",
  "665:0",
  "666:0",
  "667:0",
  "668:0",
  "669:0",
  "670:0",
  "670:5",
  "671:0",
  "672:0",
  "673:0",
  "674:0",
  "675:0",
  "676:0",
  "677:0",
  "678:0",
  "678:1",
  "679:0",
  "680:0",
  "681:0",
  "681:1",
  "682:0",
  "683:0",
  "684:0",
  "685:0",
  "686:0",
  "687:0",
  "688:0",
  "689:0",
  "690:0",
  "691:0",
  "692:0",
  "693:0",
  "694:0",
  "695:0",
  "696:0",
  "697:0",
  "698:0",
  "699:0",
  "700:0",
  "701:0",
  "702:0",
  "703:0",
  "704:0",
  "705:0",
  "706:0",
  "707:0",
  "708:0",
  "709:0",
  "710:0",
  "710:1",
  "710:2",
  "710:3",
  "711:0",
  "711:1",
  "711:2",
  "711:3",
  "712:0",
  "713:0",
  "714:0",
  "715:0",
  "716:0",
  "717:0",
  "718:0",
  "719:0",
  "719:1",
  "720:0",
  "720:1",
  "721:0",
]
`;

exports[`info releasedPokes() 7`] = `
Array [
  "1:0",
  "2:0",
  "3:0",
  "3:1",
  "4:0",
  "5:0",
  "6:0",
  "6:1",
  "6:2",
  "7:0",
  "8:0",
  "9:0",
  "9:1",
  "10:0",
  "11:0",
  "12:0",
  "13:0",
  "14:0",
  "15:0",
  "15:1",
  "16:0",
  "17:0",
  "18:0",
  "18:1",
  "19:0",
  "19:1",
  "20:0",
  "20:1",
  "21:0",
  "22:0",
  "23:0",
  "24:0",
  "25:0",
  "26:0",
  "26:1",
  "27:0",
  "27:1",
  "28:0",
  "28:1",
  "29:0",
  "30:0",
  "31:0",
  "32:0",
  "33:0",
  "34:0",
  "35:0",
  "36:0",
  "37:0",
  "37:1",
  "38:0",
  "38:1",
  "39:0",
  "40:0",
  "41:0",
  "42:0",
  "43:0",
  "44:0",
  "45:0",
  "46:0",
  "47:0",
  "48:0",
  "49:0",
  "50:0",
  "50:1",
  "51:0",
  "51:1",
  "52:0",
  "52:1",
  "53:0",
  "53:1",
  "54:0",
  "55:0",
  "56:0",
  "57:0",
  "58:0",
  "59:0",
  "60:0",
  "61:0",
  "62:0",
  "63:0",
  "64:0",
  "65:0",
  "65:1",
  "66:0",
  "67:0",
  "68:0",
  "69:0",
  "70:0",
  "71:0",
  "72:0",
  "73:0",
  "74:0",
  "74:1",
  "75:0",
  "75:1",
  "76:0",
  "76:1",
  "77:0",
  "78:0",
  "79:0",
  "80:0",
  "80:1",
  "81:0",
  "82:0",
  "83:0",
  "84:0",
  "85:0",
  "86:0",
  "87:0",
  "88:0",
  "88:1",
  "89:0",
  "89:1",
  "90:0",
  "91:0",
  "92:0",
  "93:0",
  "94:0",
  "94:1",
  "95:0",
  "96:0",
  "97:0",
  "98:0",
  "99:0",
  "100:0",
  "101:0",
  "102:0",
  "103:0",
  "103:1",
  "104:0",
  "105:0",
  "105:1",
  "106:0",
  "107:0",
  "108:0",
  "109:0",
  "110:0",
  "111:0",
  "112:0",
  "113:0",
  "114:0",
  "115:0",
  "115:1",
  "116:0",
  "117:0",
  "118:0",
  "119:0",
  "120:0",
  "121:0",
  "122:0",
  "123:0",
  "124:0",
  "125:0",
  "126:0",
  "127:0",
  "127:1",
  "128:0",
  "129:0",
  "130:0",
  "130:1",
  "131:0",
  "132:0",
  "133:0",
  "134:0",
  "135:0",
  "136:0",
  "137:0",
  "138:0",
  "139:0",
  "140:0",
  "141:0",
  "142:0",
  "142:1",
  "143:0",
  "144:0",
  "145:0",
  "146:0",
  "147:0",
  "148:0",
  "149:0",
  "150:0",
  "150:1",
  "150:2",
  "151:0",
  "152:0",
  "153:0",
  "154:0",
  "155:0",
  "156:0",
  "157:0",
  "158:0",
  "159:0",
  "160:0",
  "161:0",
  "162:0",
  "163:0",
  "164:0",
  "165:0",
  "166:0",
  "167:0",
  "168:0",
  "169:0",
  "170:0",
  "171:0",
  "172:0",
  "173:0",
  "174:0",
  "175:0",
  "176:0",
  "177:0",
  "178:0",
  "179:0",
  "180:0",
  "181:0",
  "181:1",
  "182:0",
  "183:0",
  "184:0",
  "185:0",
  "186:0",
  "187:0",
  "188:0",
  "189:0",
  "190:0",
  "191:0",
  "192:0",
  "193:0",
  "194:0",
  "195:0",
  "196:0",
  "197:0",
  "198:0",
  "199:0",
  "200:0",
  "201:0",
  "202:0",
  "203:0",
  "204:0",
  "205:0",
  "206:0",
  "207:0",
  "208:0",
  "208:1",
  "209:0",
  "210:0",
  "211:0",
  "212:0",
  "212:1",
  "213:0",
  "214:0",
  "214:1",
  "215:0",
  "216:0",
  "217:0",
  "218:0",
  "219:0",
  "220:0",
  "221:0",
  "222:0",
  "223:0",
  "224:0",
  "225:0",
  "226:0",
  "227:0",
  "228:0",
  "229:0",
  "229:1",
  "230:0",
  "231:0",
  "232:0",
  "233:0",
  "234:0",
  "235:0",
  "236:0",
  "237:0",
  "238:0",
  "239:0",
  "240:0",
  "241:0",
  "242:0",
  "243:0",
  "244:0",
  "245:0",
  "246:0",
  "247:0",
  "248:0",
  "248:1",
  "249:0",
  "250:0",
  "251:0",
  "252:0",
  "253:0",
  "254:0",
  "254:1",
  "255:0",
  "256:0",
  "257:0",
  "257:1",
  "258:0",
  "259:0",
  "260:0",
  "260:1",
  "261:0",
  "262:0",
  "263:0",
  "264:0",
  "265:0",
  "266:0",
  "267:0",
  "268:0",
  "269:0",
  "270:0",
  "271:0",
  "272:0",
  "273:0",
  "274:0",
  "275:0",
  "276:0",
  "277:0",
  "278:0",
  "279:0",
  "280:0",
  "281:0",
  "282:0",
  "282:1",
  "283:0",
  "284:0",
  "285:0",
  "286:0",
  "287:0",
  "288:0",
  "289:0",
  "290:0",
  "291:0",
  "292:0",
  "293:0",
  "294:0",
  "295:0",
  "296:0",
  "297:0",
  "298:0",
  "299:0",
  "300:0",
  "301:0",
  "302:0",
  "302:1",
  "303:0",
  "303:1",
  "304:0",
  "305:0",
  "306:0",
  "306:1",
  "307:0",
  "308:0",
  "308:1",
  "309:0",
  "310:0",
  "310:1",
  "311:0",
  "312:0",
  "313:0",
  "314:0",
  "315:0",
  "316:0",
  "317:0",
  "318:0",
  "319:0",
  "319:1",
  "320:0",
  "321:0",
  "322:0",
  "323:0",
  "323:1",
  "324:0",
  "325:0",
  "326:0",
  "327:0",
  "328:0",
  "329:0",
  "330:0",
  "331:0",
  "332:0",
  "333:0",
  "334:0",
  "334:1",
  "335:0",
  "336:0",
  "337:0",
  "338:0",
  "339:0",
  "340:0",
  "341:0",
  "342:0",
  "343:0",
  "344:0",
  "345:0",
  "346:0",
  "347:0",
  "348:0",
  "349:0",
  "350:0",
  "351:0",
  "351:1",
  "351:2",
  "351:4",
  "352:0",
  "353:0",
  "354:0",
  "354:1",
  "355:0",
  "356:0",
  "357:0",
  "358:0",
  "359:0",
  "359:1",
  "360:0",
  "361:0",
  "362:0",
  "362:1",
  "363:0",
  "364:0",
  "365:0",
  "366:0",
  "367:0",
  "368:0",
  "369:0",
  "370:0",
  "371:0",
  "372:0",
  "373:0",
  "373:1",
  "374:0",
  "375:0",
  "376:0",
  "376:1",
  "377:0",
  "378:0",
  "379:0",
  "380:0",
  "380:1",
  "381:0",
  "381:1",
  "382:0",
  "382:1",
  "383:0",
  "383:1",
  "384:0",
  "384:1",
  "385:0",
  "386:0",
  "386:1",
  "386:2",
  "386:3",
  "387:0",
  "388:0",
  "389:0",
  "390:0",
  "391:0",
  "392:0",
  "393:0",
  "394:0",
  "395:0",
  "396:0",
  "397:0",
  "398:0",
  "399:0",
  "400:0",
  "401:0",
  "402:0",
  "403:0",
  "404:0",
  "405:0",
  "406:0",
  "407:0",
  "408:0",
  "409:0",
  "410:0",
  "411:0",
  "412:0",
  "412:1",
  "412:2",
  "413:0",
  "413:1",
  "413:2",
  "414:0",
  "415:0",
  "416:0",
  "417:0",
  "418:0",
  "419:0",
  "420:0",
  "421:0",
  "421:1",
  "422:0",
  "423:0",
  "424:0",
  "425:0",
  "426:0",
  "427:0",
  "428:0",
  "428:1",
  "429:0",
  "430:0",
  "431:0",
  "432:0",
  "433:0",
  "434:0",
  "435:0",
  "436:0",
  "437:0",
  "438:0",
  "439:0",
  "440:0",
  "441:0",
  "442:0",
  "443:0",
  "444:0",
  "445:0",
  "445:1",
  "446:0",
  "447:0",
  "448:0",
  "448:1",
  "449:0",
  "450:0",
  "451:0",
  "452:0",
  "453:0",
  "454:0",
  "455:0",
  "456:0",
  "457:0",
  "458:0",
  "459:0",
  "460:0",
  "460:1",
  "461:0",
  "462:0",
  "463:0",
  "464:0",
  "465:0",
  "466:0",
  "467:0",
  "468:0",
  "469:0",
  "470:0",
  "471:0",
  "472:0",
  "473:0",
  "474:0",
  "475:0",
  "475:1",
  "476:0",
  "477:0",
  "478:0",
  "479:0",
  "479:1",
  "479:2",
  "479:3",
  "479:4",
  "479:5",
  "480:0",
  "481:0",
  "482:0",
  "483:0",
  "484:0",
  "485:0",
  "486:0",
  "487:0",
  "487:1",
  "488:0",
  "489:0",
  "490:0",
  "491:0",
  "492:0",
  "492:1",
  "493:0",
  "493:1",
  "493:2",
  "493:3",
  "493:4",
  "493:5",
  "493:6",
  "493:7",
  "493:8",
  "493:9",
  "493:10",
  "493:11",
  "493:12",
  "493:13",
  "493:14",
  "493:15",
  "493:16",
  "493:17",
  "494:0",
  "495:0",
  "496:0",
  "497:0",
  "498:0",
  "499:0",
  "500:0",
  "501:0",
  "502:0",
  "503:0",
  "504:0",
  "505:0",
  "506:0",
  "507:0",
  "508:0",
  "509:0",
  "510:0",
  "511:0",
  "512:0",
  "513:0",
  "514:0",
  "515:0",
  "516:0",
  "517:0",
  "518:0",
  "519:0",
  "520:0",
  "521:0",
  "522:0",
  "523:0",
  "524:0",
  "525:0",
  "526:0",
  "527:0",
  "528:0",
  "529:0",
  "530:0",
  "531:0",
  "531:1",
  "532:0",
  "533:0",
  "534:0",
  "535:0",
  "536:0",
  "537:0",
  "538:0",
  "539:0",
  "540:0",
  "541:0",
  "542:0",
  "543:0",
  "544:0",
  "545:0",
  "546:0",
  "547:0",
  "548:0",
  "549:0",
  "550:0",
  "551:0",
  "552:0",
  "553:0",
  "554:0",
  "555:0",
  "555:1",
  "556:0",
  "557:0",
  "558:0",
  "559:0",
  "560:0",
  "561:0",
  "562:0",
  "563:0",
  "564:0",
  "565:0",
  "566:0",
  "567:0",
  "568:0",
  "569:0",
  "570:0",
  "571:0",
  "572:0",
  "573:0",
  "574:0",
  "575:0",
  "576:0",
  "577:0",
  "578:0",
  "579:0",
  "580:0",
  "581:0",
  "582:0",
  "583:0",
  "584:0",
  "585:0",
  "586:0",
  "587:0",
  "588:0",
  "589:0",
  "590:0",
  "591:0",
  "592:0",
  "593:0",
  "594:0",
  "595:0",
  "596:0",
  "597:0",
  "598:0",
  "599:0",
  "600:0",
  "601:0",
  "602:0",
  "603:0",
  "604:0",
  "605:0",
  "606:0",
  "607:0",
  "608:0",
  "609:0",
  "610:0",
  "611:0",
  "612:0",
  "613:0",
  "614:0",
  "615:0",
  "616:0",
  "617:0",
  "618:0",
  "619:0",
  "620:0",
  "621:0",
  "622:0",
  "623:0",
  "624:0",
  "625:0",
  "626:0",
  "627:0",
  "628:0",
  "629:0",
  "630:0",
  "631:0",
  "632:0",
  "633:0",
  "634:0",
  "635:0",
  "636:0",
  "637:0",
  "638:0",
  "639:0",
  "640:0",
  "641:0",
  "641:1",
  "642:0",
  "642:1",
  "643:0",
  "644:0",
  "645:0",
  "645:1",
  "646:0",
  "646:1",
  "646:2",
  "647:0",
  "647:1",
  "648:0",
  "648:1",
  "649:0",
  "649:1",
  "649:2",
  "649:3",
  "649:4",
  "650:0",
  "651:0",
  "652:0",
  "653:0",
  "654:0",
  "655:0",
  "656:0",
  "657:0",
  "658:0",
  "658:1",
  "658:2",
  "659:0",
  "660:0",
  "661:0",
  "662:0",
  "663:0",
  "664:0",
  "665:0",
  "666:0",
  "667:0",
  "668:0",
  "669:0",
  "670:0",
  "670:5",
  "671:0",
  "672:0",
  "673:0",
  "674:0",
  "675:0",
  "676:0",
  "677:0",
  "678:0",
  "678:1",
  "679:0",
  "680:0",
  "681:0",
  "681:1",
  "682:0",
  "683:0",
  "684:0",
  "685:0",
  "686:0",
  "687:0",
  "688:0",
  "689:0",
  "690:0",
  "691:0",
  "692:0",
  "693:0",
  "694:0",
  "695:0",
  "696:0",
  "697:0",
  "698:0",
  "699:0",
  "700:0",
  "701:0",
  "702:0",
  "703:0",
  "704:0",
  "705:0",
  "706:0",
  "707:0",
  "708:0",
  "709:0",
  "710:0",
  "710:1",
  "710:2",
  "710:3",
  "711:0",
  "711:1",
  "711:2",
  "711:3",
  "712:0",
  "713:0",
  "714:0",
  "715:0",
  "716:0",
  "717:0",
  "718:0",
  "718:1",
  "718:2",
  "719:0",
  "719:1",
  "720:0",
  "720:1",
  "721:0",
  "722:0",
  "723:0",
  "724:0",
  "725:0",
  "726:0",
  "727:0",
  "728:0",
  "729:0",
  "730:0",
  "731:0",
  "732:0",
  "733:0",
  "734:0",
  "735:0",
  "736:0",
  "737:0",
  "738:0",
  "739:0",
  "740:0",
  "741:0",
  "741:1",
  "741:2",
  "741:3",
  "742:0",
  "743:0",
  "744:0",
  "745:0",
  "745:1",
  "746:0",
  "746:1",
  "747:0",
  "748:0",
  "749:0",
  "750:0",
  "751:0",
  "752:0",
  "753:0",
  "754:0",
  "755:0",
  "756:0",
  "757:0",
  "758:0",
  "759:0",
  "760:0",
  "761:0",
  "762:0",
  "763:0",
  "764:0",
  "765:0",
  "766:0",
  "767:0",
  "768:0",
  "769:0",
  "770:0",
  "771:0",
  "772:0",
  "773:0",
  "773:1",
  "773:2",
  "773:3",
  "773:4",
  "773:5",
  "773:6",
  "773:7",
  "773:8",
  "773:9",
  "773:10",
  "773:11",
  "773:12",
  "773:13",
  "773:14",
  "773:15",
  "773:16",
  "773:17",
  "774:0",
  "774:1",
  "774:2",
  "774:3",
  "774:4",
  "774:5",
  "774:6",
  "774:7",
  "775:0",
  "776:0",
  "777:0",
  "778:0",
  "779:0",
  "780:0",
  "781:0",
  "782:0",
  "783:0",
  "784:0",
  "785:0",
  "786:0",
  "787:0",
  "788:0",
  "789:0",
  "790:0",
  "791:0",
  "792:0",
  "793:0",
  "794:0",
  "795:0",
  "796:0",
  "797:0",
  "798:0",
  "799:0",
  "800:0",
  "801:0",
  "801:1",
  "802:0",
]
`;

exports[`info types() 1`] = `
Array [
  0,
  1,
  2,
  3,
  4,
  5,
  6,
  7,
  9,
  10,
  11,
  12,
  13,
  14,
  15,
  18,
]
`;

exports[`info types() 2`] = `Array []`;

exports[`info types() 3`] = `Array []`;

exports[`info types() 4`] = `Array []`;

exports[`info types() 5`] = `Array []`;

exports[`info types() 6`] = `Array []`;

exports[`info types() 7`] = `Array []`;
